[TIL/book] Notion 링크 추가

--- a/book/소프트웨어_장인.md
+++ b/book/소프트웨어_장인.md
@@ -163,3 +163,6 @@
     - 기업들이 좋은 개발자를 바라듯이, 소프트웨어 장인도 일하기 좋은 기업을 원한다.
     - 소프트웨어 장인의 가치나 역량에 관심이 없는 고객을 위해 열심히 일해봤자 공허함만 커질 뿐이다.
     - 고객과의 관계가 동반자 관계와 거리가 멀고 나의 커리어에 부정적이라고 느낀다면 다른 고객을 찾아봐야 한다.
+  
+
+- [Notion link](https://www.notion.so/be86a3f5bde74497a18127add9219fb3)
