[TIL/book] 소프트웨어 장인 (~ Chapter 6. 동작하는 소프트웨어)

--- a/book/소프트웨어_장인.md
+++ b/book/소프트웨어_장인.md
@@ -163,6 +163,199 @@
     - 기업들이 좋은 개발자를 바라듯이, 소프트웨어 장인도 일하기 좋은 기업을 원한다.
     - 소프트웨어 장인의 가치나 역량에 관심이 없는 고객을 위해 열심히 일해봤자 공허함만 커질 뿐이다.
     - 고객과의 관계가 동반자 관계와 거리가 멀고 나의 커리어에 부정적이라고 느낀다면 다른 고객을 찾아봐야 한다.
+
+
+## Chapter 4. 소프트웨어 장인의 태도
+
+### 내 커리어의 주인은 누구인가
+
+---
+- 투자는 스스로 해야한다. 전문가들은 스스로의 돈과 시간을 들인다.
+- 프로처럼 행동하라
+
+  → 스스로를 발전시키는 데 자신의 돈과 시간을 들여야 한다.
+
+- 소프트웨어 장인으로서 성공적인 커리어를 갖기 위한 key: 변화에 적응하고 계속해서 역량을 증진시키는 것
+
+
+### 끊임없는 자기계발
+
+---
+- 독서, 많은 독서
+  - 특정 기술에 대한 서적
+    - 당장의 업무에는 유용하지만 그 가치가 오래가지는 않는다.
+    - 커리어의 다음 단계를 계획하는 데도 큰 도움이 된다.
+    - 자바, Hibernate 같은 기술 서적
+  - 특정 개념에 대한 서적
+    - 커리어를 진전시킬 때 필요한 기초를 쌓을 수 있는 책이다.
+    - 새로운 개념이나 패러다임 또는 실행 관례들을 소개한다.
+    - 이러한 개념들을 알아두면 새 기술을 배울 때 학습 시간을 크게 단축시키는 장점이 있다.
+    - 테스트 주도 개발, 도메인 기반 개발, 객체 지향 설계, 함수형 프로그래밍 등의 서적
+  - 행동양식에 대한 서적
+    - 효율적으로 팀에서 일할 수 있게 안내하거나, 일반적인 상황에서 더 나은 프로페셔널이 될 수 있도록 조언한다.
+    - 애자일 방법론, 소프트웨어 장인정신, 린 소프트웨어 개발 등의 서적
+  - 혁명적 서적(또는 고전)
+    - 일하는 방식이나 개인의 가치관을 바꾸는 책이다.
+    - 실용주의 프로그래머, 디자인 패턴(GoF), 테스트 주도 개발, 클린 코더, 리펙토링 등의 서적
+- 블로그
+  - 유용한 최신 정보원
+  - 현재 배우는 것이 무엇이든 글로 써서 기록을 남기는 것은 가치가 있다.
+- 기술 웹사이트
+  - 시장의 최신 동향을 알아보기에 좋은 수단이다.
+
+
+### 끊임없는 훈련
+
+---
+- 품질이 좋은 코드를 능숙하게 작성하고 싶다면 높은 품질의 코드를 작성하는 방법을 훈련해야 한다.
+
+  → 문제 해결 보다는, 문제 해결에 사용한 테크닉에 집중해야 한다.
+
+- 실행 관례와 새로운 기술들을 배우는 것은
+  - 자동차 운전과 같다.
+  - 더 많이 훈련할수록 더 편안해지고 별도의 주의 집중, 의식적 노력이 없어도 자연스럽게 할 수 있게 된다.
+  - 훈련할 때는 작성 가능한 최선의 코드를 만드는 데 집중해야 한다.
+  - 변수, 메서드, 클래스 이름을 가장 이해하기 쉽고 의미를 포괄할 수 있도록 최선을 다해 네이밍한다.
+  - 훈련을 통해 익숙치 못한 테스트 주도 개발, 다른 개발 언어, 새 프레임워크 같은 것들을 연습할 수 있다.
+  - 펫 프로젝트는 재밌어야 한다.
+- 오픈 소스
+  - 문서에 내용을 추가한다든가, 테스트 코드를 작성한다든가, 버그 목록이나 구현해야 할 기능 목록에서 가장 간단한 것을 시도하자.
+  - 작은 기능을 새로 제안하고 구현해도 좋다.
+  - 훌륭한 개발자들이 어떻게 일하는지 체험할 수 있다.
+- 페어 프로그래밍
+  - 팀의 정신적 에너지가 높아지고 개발자들이 서로 좀더 친밀해질 수 잇다.
+  - 나의 한계가 드러날 수 있다는 걱정을 극복해야만 한다.
+  - 개발자들은 보통 자신이 다른 개발자들보다 더 훌륭하고 능력있다고 생각하기 쉽다.
+  - 페어 프로그래밍을 하면 우리가 작성한 코드와 아이디어에 대해 즉각 피드백을 받는다.
+  - 훌륭한 개발자는 다른 어떤 개발자가 보더라도 이해할 수 있는 코드를 작성한다.
+  - 전혀 모르는 사람과 페어 프로그래밍을 하는 것이 더 좋다.
+
+
+### 사회 활동: 다른 개발자들과 어울리기
+
+---
+- 아이디어를 주고 받고, 페어 프로그래밍을 하고, 사회적으로 교류할 수 있는 인적 네트워크를 형성하는 것은 성공적인 커리어를 위해 상당히 중요하다.
+- 열정적인 개발자들은 항상 배우려 하고 그들이 아는 것을 공유하려 하기 때문에 그들과 어울리는 것은 대단히 좋은 일이다.
+
+
+### 의도한 발견
+
+---
+- 2단계 무지
+  - 소프트웨어 프로페셔널의 최대 실수는 자신이 모르는 것을 모른다고 받아들이지 않는 것이다.
+  - 모르고 있다는 것을 인지하지 못한 상태.
+  - 개발자 대다수는 긍정적이고 낙관적이다.
+
+→ 아직 배울 내용이 많음을 인정하는 것은 성숙하다는 증거이고 마스터가 되기 위한 첫걸음이다.
+
+- 무지의 수준 낮추기
+  - 우선순위에서 높이 두고, 모르는 것을 배우는 기회를 만들기 위해 항상 노력해야 한다.
+  - 아무 동료나 붙잡고 최신 기술 동향을 따라가기 위해 그 동료가 어떤 노력을 하고 있는지 물어보자.
+  - 무지에 대항하는 습관을 들이면 프로페셔널로 성장하는 데 큰 도움이 된다.
+
+
+### 일과 삶의 균형
+
+---
+- 개인 시간을 내어 커리어에 투자해야 한다고 하면 항상 "그럴 시간이 없다" 는 대답이 돌아오는데,
+
+  → 그것은 당신이 그렇게 믿기로 결정한 것이고 그에 따라 현실이 된다.
+
+- 진실은, 우리는 항상 시간이 있다.
+  - 생산적인 시간은 보통 새로운 것을 배우거나
+  - 우리가 사랑하는 사람과 함께 보내는 시간
+  - 쉬는 데 시간을 쓰는 것이다.
+
+- 시간 만들기
+  - 확보한 시간을 카페에서 이용해보자.
+  - 회사에서는 자꾸 일에 신경을 쓰거나 동료의 방해를 받기 쉽다.
+  - 한 주에 두 번 정도 노트
+  - 혼자 학습해서 배울 수 있는 것에는 한계가 있다.
+- 집중: 뽀모도로 기법
+  - 업무 외 시간을 잘 활용하려면 그 시간에 제대로 집중하는 것이 핵심이다.
+  - 주제가 정해지면 거기에만 몰입해서 시간을 사용해야 한다.
+
+- 커리어의 주인이 되기는 어렵다.
+  - 상당한 노력을 기울여야 한다.
+  - 소프트웨어 장인으로서 성공적인 커리어를 가지려면 결단력과 열정이 필요하다.
+  - 집중하지 못하면 많은 노력들이 낭비된다.
+  - 언제, 어디서, 누구와 일하고 나의 일에 대한 대가로 얼마를 받을지에 대한 결정권을 가질 수 있다.
+  - 우리는 모두 정확히 같은 시간이 주어진다.
+
+    → 차이점은 그 시간을 어떻게 쓰느냐일 뿐이다.
+
+
+## Chapter 5. 영웅, 선의 그리고 프로페셔널리즘
+
+### '아니오'라고 말하는 방법 배우기
+
+---
+- 상용화 수준에 미달되는 저품질 소프트웨어가 될 수 밖에 없다면 주어진 조건들을 거부해야 한다.
+- 프로답게 행동하기
+  - 불명확하거나 불편한 사실들, 걱정되는 사항들을 최대한 이른 시점에 문제제기 해야 한다.
+  - 주어진 일정을 준수할 수 있을지에 대해 어느정도 자신감을 가지고 있는지 꾸준히 표명해야 한다.
+  - 그저 실망시키지 않기 위해 말하는 '네'는 거짓말에 지나지 않는다. → 중독적이고 파괴적인 습관이다.
+
+    → 중독적이고 파괴적인 습관이다.
+
+  - 개발자들은 협상
+  - 상황이 정말 나빠질 때는 관리자에게 해당 이슈를 전달할 것을 요구하고,
+- 개발자들의 협상 기술
+
+
+### 대안 제시
+
+---
+- 모든 '아니오'에는 반드시 하나 이상의 대안이 따라와야 한다.
+  - 최소한 브레인 스토밍은 해봐야 한다.
+  - 불완전한 아이디어가 단초가 되어 다른 사람들이 쓸만한 대안을 만들어내는 데 도움이 되는 경우도 있다.
+- 문제를 어떻게 풀어야 할지 방법을 모를 수도 있다.
+  - 최대한 이른 시점에 그 사실을 정직하게 알려야 한다.
+  - 그리고 문제 해결을 위해서 최선의 노력을 다하고 있음을 보여줘야 한다.
+  - 진척 상황을 가능한 자주 공유하는 것이 할 수 있는 최선의 방법이다.
+
+    → 그렇게 하면 새 정보가 있을 때 마다 팀이 어떻게 대응해야 할지 결정할 기회를 얻게 된다.
+
+
+### 깨어 있는 관리자
+
+---
+- 만약 우리가 '네'라고 약속할 때마다 제때 완료를 했었다면 우리가 '아니오'라고 할 때 관리자들은 우리를 더 많이 믿어줄 것이다.
+
+  → 현명한 사람은 자신이 모든 것을 알 수는 없고, 팀으로 일할 때는 동료들에게 의존해야 한다는 것도 안다.
+
+- 문제를 숨기지 않고 드러내는 태도는 모두가 하나의 팀으로서 공동의 목표를 위해 일하고 있다는 증표이다.
+
+- 좋은 관리자
+  - 외부의 압력으로부터 개발자를 보호하고 팀이 가진 장애 요소들을 제거한다.
+  - 팀원들이 편안한 마음으로 자신감을 갖고 일할 수 있도록 해준다.
+  - 화합의 촉매가 되어, 팀을 건강하고 행복하고 단결되게 해야 한다.
+
+
+## Chapter 6. 동작하는 소프트웨어
+
+### 보이지 않는 위협
+
+---
+- 코드의 품질을 돌보는 책임은 바로 개발자에게 있다.
+  - 개발자가 코드의 문제를 프로젝트 관리자에게 이야기하고 리팩토링할 시간을 요구할 때도 있지만 무시되는 경우가 많다.
+
+    → 관리자가 나쁜 코드의 악영향에 대한 이해가 부족하거나, 개발자가 문제 상황을 제대로 설명하지 못한 것이다.
+
+- 평범한 개발자가 아닌 장인을 고용하라.
+  - 장인에게 시간적 제약이나 요구사항의 변경이, 나쁜 코드를 위한 변명이 될 수 없다.
+  - 장인은 좋은 디자인 원칙들과 테크닉을 전체 애플리케이션의 생애에 걸쳐 적용한다.
+
+- QA는 아무런 문제도 발견할 수 없어야 한다.
+  - 버그가 나올 때마다 우리가 일을 제대로 안 했다는 증거가 발견되는 것이다.
+  - 개발팀이 자동화할 수 있는 단위 테스트는 작성하자.
+- 단위 테스트 구현
+  - 정규적인 업무 시간으로 따로 할당하지 말자.
+  - 단위 테스트는 우리가 코드를 작성하는 방식에 이미 녹아있는 것이지 별도의 작업이 아니다.
+  - 기능 구현이 완료되었다고 할 수 있으려면, 반드시 테스트까지 되어야 한다.
+  - 우리가 공식 작업 일정표에 뭔가를 올려 놓는다는 것은, 제품 오너가 그 중 중요하지 않다고 생각하는 것을 삭제할 수 있는 권리를 준다는 것과 같다.
+  - 단위 테스트 뿐 아니라 코드의 동작을 보증하기 위한 다른 복합적인 테스트도 만들어야 한다.
+  - 테스트 코드를 따로 안 만들어도 된다고 주장하는 개발자는 대단히 자기 중심적이고 이기적인 사람이다.
   
 
 - [Notion link](https://www.notion.so/be86a3f5bde74497a18127add9219fb3)
