[TIL/book] 소프트웨어 장인 (~ Chapter 10. 소프트웨어 장인 면접하기)

--- a/book/소프트웨어_장인.md
+++ b/book/소프트웨어_장인.md
@@ -356,6 +356,268 @@
   - 우리가 공식 작업 일정표에 뭔가를 올려 놓는다는 것은, 제품 오너가 그 중 중요하지 않다고 생각하는 것을 삭제할 수 있는 권리를 준다는 것과 같다.
   - 단위 테스트 뿐 아니라 코드의 동작을 보증하기 위한 다른 복합적인 테스트도 만들어야 한다.
   - 테스트 코드를 따로 안 만들어도 된다고 주장하는 개발자는 대단히 자기 중심적이고 이기적인 사람이다.
-  
+
+
+### 레거시 코드
+
+---
+- 각 조각을 그룹으로 나누고 모서리나 경계선부터 시작해야 한다.
+- 재미있고 도전적인 문제로 바라보자.
+
+
+## Chapter 7. 기술적 실행 관례
+
+### 실행 관례와 가치
+
+---
+- 중요한 것은 소프트웨어 장인정신을 심는 것이다.
+- 원활한 정보 소통, 빠른 피드백, 빠른 결과물 생성, 실수 예방, 고객 만족, 최선을 다하지 못하거나 배우지 못하는 것에 대한 부끄러움을 느낄 줄 아는 것, 이러한 것들에 가치를 느껴야 한다.
+
+- 자동화된 테스트
+- 테스트 주도 개발
+- 지속가능한 통합: 일단 멈추고 버그부터 수정한다는 태도가 필요하다.
+- 페어 프로그래밍
+  - 코드 리뷰는 시스템에 대한 지식과 유용한 코딩 스킬을 팀 전체에 전하는 데도 좋다.
+  - 하루 이틀 단위로 주기적으로 페어를 바꾸는 것이 좋다.
+- 리펙토링
+  - 깨진 유리창 법칙: 엉망인 코드가 많을수록 엉망인 코드가 늘어나는 속도도 빨라진다.
+  - 프로페셔널로서 행동한다는 것은 트레이드오프를 이해한다는 것이다.
+    - 수정되는 부분에 한정해서 리펙토링을 집중하는 것이 더 나은 접근 방법이다.
+    - 애당초 코드를 수정할 필요가 없다면, 리펙토링해야 할 이유도 없다.
+    - 해당 부분을 이해하여 변경할 필요가 있을 때, 적용해야 한다.
+
+
+### 책임감
+
+---
+- 개발자든, PM이든, 비즈니스 담당이든, 이러한 실행 관례를 원치 않는다고 하면 귀담아 들어야 한다.
+  - 앞에서 설명된 가치들을 이야기 한 후,
+
+    "이러한 가치와 최소한 동등한 수준의 가치를 만들어 내기 위해 당신은(혹은 우리는) 무엇을 하고 있습니까? 이러한 실행 관례보다 더 나은 방법이 있습니까?" 같이 되물어야 한다.
+
+  - 우리는 이러한 결정들을 기록하고 문제가 있을 때 에스컬레이션 해야 한다.
+
+
+### 실용주의
+
+---
+- 실용주의: 소프트웨어 장인이 가져야 하는 최선의 역량 중 하나다.
+  - 누군가가 이야기했기 때문에, 또는 그 실행 관례 도입을 위한 도입을 해서는 안된다.
+  - 무언가를 절대적인 진리로 바라보는 것은 바람직하지 않다.
+  - 항상 우리가 무엇을 하고 있고 그것을 왜 하고 있는지 질문해야 한다.
+  - 어떤 실행 관례가 다른 실행 관례보다 더 나은지 알아보는 가장 좋은 방법
+
+    → 프로젝트에 어떤 가치를 주는지, 피드백 루프가 얼마나 긴지 비교해보는 것이다.
+
+- 소프트웨어 장인으로서, 우리의 일에 항상 최선의 기술, 도구, 절차, 방법론 그리고 실행 관례를 선택할 수 있도록 개방적인 사고 방식을 가져야 한다.
+
+
+## Chapter 8. 길고 긴 여정
+
+- 숙달할 수 있을 정도로 어떤 것에 집중하고 결단하기는 꽤 어려운 일이다. 우리 중 극히 일부만이 마스터가 되기 위한 어렵고 힘든 긴 여정을 감내해낸다.
+
+### 결단과 집중
+
+---
+- 어디로 가고 있는지 모르고 있다면, 결국 가고 싶지 않은 곳으로 간다.
+- 소프트웨어 장인으로서 스스로의 커리어를 가치있게 여기고 아끼고 보살펴야 한다.
+- 커리어가 개인의 삶 전체에 이어지는 긴 여정이며 각자의 선택에 따라 마스터가 될 수 있음을 이해해야 한다.
+- 커리어를 몇 년짜리 프로젝트라 여기고 어떻게 관리할지 생각해보자.
+- 어디로 가야 할지 모른다면
+  - 어디로 가고 싶은지 커리어의 방향을 확신할 수 없을 때는 모든 문들을 열어보기 시작해야 한다. 우리에게 기회가 나타날 수 있는 상황들을 만들어낼 필요가 있다.
+  - 밖으로 나가서 교류를 해야 한다. 기회를 만들어 내기 위해 할 수 있는 몇 가지 활동들
+    - 익숙하고 편한 것에서 벗어나 새로운 것을 공부하고 기술적 지식을 확장한다.
+
+      ex> 새로운 프로그래밍 언어나 기술들을 배운다.
+
+    - 지역 커뮤니티에 정기적으로 출석하거나 행사에 참여한다.
+    - 다른 개발자, 비즈니스맨들과 교류한다.
+    - 새롭게 배운 것, 지금 하고 있는 것들에 대해 블로깅한다.
+    - 오픈 소스 프로젝트에 참여한다.
+    - 프로젝트를 만들고 공개한다.
+    - 컨퍼런스에 참석하거나 연사로 나선다.
+
+
+### 투자로서의 일터
+
+---
+- 거쳐가는 모든 직장, 프로젝트들 하나 하나를 투자로 인식하는 것이 가장 중요하다.
+- 직장은 단순히 돈을 버는 곳이 아니라 큰 목표를 향해 다가가는 단계 중 하나다.
+- 소프트웨어 장인은 거치는 자리마다 끊임없이 지식과 열정과 몰입 그리고 프로페셔널로서의 태도를 키워나간다.
+- 당부의 말
+  - 개발자들은 그들이 배우고 싶은 것을 따라서 일을 선택한다.
+  - 그 일을 떠날 때는 생각하는 커리어 방향과 맞지 않아서일 때도 있지만 배울 것이 더는 없기 때문에도 그렇게 한다.
+  - 어떤 이유에서든 직장을 떠날 때 남는 것은 오로지 지식과 경험뿐이다.
+  - 항상 배우고 더 나은 소프트웨어 장인이 되는 것에 집중한다면, 단순히 돈만 쫓을 때보다 좋은 직장을 얻기가 오히려 수월하다.
+
+
+### 자율성, 통달, 목적의식
+
+---
+- 지식 노동자를 움직이는 세 가지
+  - 자율성: 우리가 무엇을, 어떻게, 언제할지 통제할 수 있는 상태
+  - 통달: 더 나은 프로페셔널, 더 나은 인간이 되기 위해 계속 배우고 진화하는 것
+  - 목적의식: 지금 하고있는 일이 중요하고 무언가를 더 나아지게 하고 있다고 느끼는 것
+- 자율성과 통달은 협상 불가능한 마지노선이다. 둘 중 하나라도 확보할 수 없다면 나는 일을 맡지 않을 것이다.
+
+
+### 회사 안에서의 커리어
+
+---
+- 피터의 원리: 관리자들이 그들보다 더 역량 있는 부하직원들이 수행하는 정교한 업무를 제대로 이해하지 못한다.
+- 역량이 부족한 사람들만이 일자리 걱정을 한다.
+- 소프트웨어 장인은 자신의 커리어 방향과 일치하는 경우에만 회사 안의 커리어를 수용한다.
+- 어떤 종착지에 도달하는 것보다 그 여정 자체가 훨씬 더 중요함을 알고 있다.
+
+
+### 요약
+
+---
+- 커리어의 개발 과정 중에 많은 집중과 결단력이 필요하다.
+- 특정 회사 안에서의 커리어보다 개인으로서 우리 자신의 커리어가 항상 우선해야 한다.
+
+
+# Part 2. 완전한 전환
+
+## Chapter 9. 인재 채용
+
+- 새로운 인재를 채용할 때 현재의 문제를 더 키우지 않아야 한다는 것을 우선으로 고려해야 한다.
+- 지속적으로 배우고 혁신하고 효율적인 실행 관례를 도입하고, 프로젝트의 성과와 코드의 품질에 주의를 기울이고, 문제를 풀기 위해 스스로 협력하고, 무엇이든 더 나은 방법을 추구한다면
+
+  → 이러한 훌륭한 개발자들과 비교해 기준에 미달되는 개발자를 채용하는 것도 어리석은 일이다.
+
+- 모든것을 더 나아지도록 변화시킬 수 있는 사람, 더 품질 좋은 소프트웨어를 효율적으로 만들어내고 비용을 낮출 수 있는 사람을 원한다.
+
+### 인터뷰할 시간이 없다는 변명
+
+---
+- 좋은 개발자인지 나쁜 개발자인지가 면접관 개인의 기술적 역량, 가치 기준, 편견에 따라 정해진다.
+- 항상 배우기를 원하고 더 나은 일하는 방법을 찾는 사람은 자신보다 훌륭한 사람과 함께 일하기를 원하고 최소한 자신과 비슷한 역량의 사람이라도 채용되기를 희망한다.
+
+
+### 일은 단순히 일이 아니다
+
+---
+- 훌륭한 개발자들에게 일은 그냥 일이 아니다.
+- 일은 취미이자 열정이다. 스스로 동기가 부여되어 혁신하고 기술 변화를 이끈다.
+- 열정적인 개발자는 성장하기 위해 개인 시간을 기꺼이 투자한다.
+- 좋아하는 일을 하면서도 돈을 벌 수 있어서 행운이라고 느낀다.
+- 개발자들은 그들이 빛날 수 있는 기회와 재미난 일거리를 많이 제공해 줄 회사를 찾는다.
+
+
+### 추천 채용
+
+---
+- 소프트웨어 장인이라면 다른 개발자를 추천하는 것 자체가 스스로의 평판을 시험대에 올리는 행위임을 이해한다.
+- 추천한 본인과 동등한 수준의 열정, 가치, 원칙으로 헌신하는 사람이어야 한다.
+
+
+### 효과적인 선별 조건의 정의
+
+---
+- 내가 가장 중요하게 생각하는 개발자의 자질이 무엇인지, 개발팀에 어떤 문화를 심고 싶은지 생각해보자.
+- 열정적은 소프트웨어 장인, 열정은 기술적인 역량이나 프로그래밍 언어에 대한 이해보다 더 중요한 조건이다.
+- 항상 새로운 것을 시도하고, 배우고, 지식을 공유하고, 커뮤니티 활동에 적극적인 사람을 원한다.
+- 열정 수준을 가늠할 방법
+  - GitHub 계정
+  - 블로그
+  - 오픈 소스 활동
+  - 기술 커뮤니티나 사용자 그룹 활동 내역
+  - 펫 프로젝트 내용
+  - 좋아하는 기술서적 목록
+  - 참석했거나 발표했던 컨퍼런스
+
+
+### 적극적인 리쿠르팅
+
+---
+- 회사는 시급하게 채용해야 하는 상황을 절대 만들어서는 안 된다.
+
+
+## Chapter 10. 소프트웨어 장인 면접하기
+
+### 비즈니스 협상
+
+---
+- 면접을 볼 때, 일자리를 구걸하는 입장이 아니라는 것을 기억해야 한다.
+- 소프트웨어 장인들은 업계에서 나름 평판이 있다. 이 평판에 해를 끼치는 위험요소
+  - 모호한 비즈니스 가치
+  - 상명하복식 관리
+  - 공장 노동자처럼 취급받는 개발자들
+  - 아무런 협의없이 그저 통보되는 기술적 결정
+  - 개발자가 고객이나 이해 관계자와 격리된 환경 등등
+
+→ 이러한 상태로 꾸려지고 있는 프로젝트나 회사에 합류하는 것은 장인의 평판을 상당히 깎아내리는 행위다.
+
+소프트웨어 장인이 이런 프로젝트에서 얻을 수 있는 것은 당황과 분노뿐이다. 생산적인 파트너십이 자리잡히지 않은 회사는 피해야 한다.
+
+성공적인 프로페셔널이라면, 나쁜 조건을 거부하는 것이 나은 경우도 있다는 것을 이해한다.
+
+
+### 생산적인 파트너십을 알아보는 방법
+
+---
+- 회사 입장에서의 관점
+  - 우리가 하는 일에 대해서 여러 관점의 질문들을 던지고, 일하는 방식을 개선하여 목표를 성공적으로 달성하는 데 기여하기를 원한다.
+  - 어떤 식으로 일하는지, 무엇을 성취하길 원하는지, 당면한 문제가 무엇인지 등 질문을 기대하자.
+  - 재능있는 개발자를 채용한다는 의미는 그의 의견을 중요하게 생각하고 일하는 방식을 개선하는 데 그의 도움을 받겠다는 것이다.
+  - 협업과 권한부여는 성공적인 팀이 되기 위해 반드시 필요하다.
+  - 항상 질문을 많이 하는 지원자를 우선시하는 것이 좋다. 최소한 지원자 스스로 즐겁게 일할 수 있는 곳을 찾고 있다는 증거는 될 수 있다.
+  - 과거 수행한 프로젝트나 업무, 기술, 또는 스스로 성취한 사항들을 이야기할 때 얼마나 열정적이고 애착을 보이는가? 실패 사례에 대해 어떻게 표현하는가? 실패에 대해 책임감을 느끼는가 아니면 남 탓을 하는가? 잘못된 상황을 정상으로 되돌리기 위해 무엇이든 노력해본 적이 있는가? 이전 업무에서 불평 불만 대신 그 상황을 개선하기 위해 스스로 노력한 적이 있는가? 어떤 종류의 업무 환경을 찾고 있는가? 회사에서 그러한 환경을 제공해 줄 수 있는가?
+
+- 지원자 입장에서의 관점
+  - 면접관은 누구인가?(프로젝트 관리자, 개발자, 팀 리더, 아키텍트?) 얼마나 많은 지원자들을 면접보고 있나? 다단계 면접인가? 지원자에게 어떤 종류의 질문들이 주어지고 있나? 특정된 질문인가 개방형 질문인가? 면접관이 기술적 질문에 대해 yes/no 단답형을 좋아하는가, 좀더 상세하게 지원자의 생각들을 파보려 하는가?
+  - 관리층이 개발자들을 신뢰하는지 여부다.
+  - 다단계 면접은 제대로 된 프로페셔널을 채용하는 데 진지하게 임한다는 징표다.
+  - 면접관의 질문은 그 팀에 합류했을 때 지원자에게 기대하는 것들을 담고 있다.
+  - 지원자가 함께 일할만한 사람인지? 대립적인 논쟁에서도 편안할 수 있는지?
+  - 면접관이 이미 주어진 질문지를 그냥 읽기만 하고 매우 특정된 짧은 질문들만 연이어 내놓는다면, 그 면접관은 새로운 아이디어를 듣거나 논쟁하고 싶어하지 않는다는 뜻이다.
+  - 잠깐 구글을 검색해보거나 API, 도구들의 레퍼런스 문서를 읽는 것만으로 쉽게 대답할 수 있는 질문들로 좋은 개발자와 그렇지 않은 개발자를 가려낼 수 있을까? 전혀 의미가 없다.
+
+
+### 바람직한 면접 방법
+
+---
+- 좋은 면접은 자유 토론과도 같아야 한다.
+- 페어 프로그래밍 면접
+  - 어떤 테스트를 작성할지 얼마나 빨리 결정하는가?(경험 수준)
+  - 개발 도구(IDE, 언어, 테스팅/목업 프레임워크, 단축키 등)에 얼마나 익숙한가?
+  - 클래스, 메서드, 변수 네이밍을 얼마나 적합하게 하는가?
+  - 코드를 얼마나 깨끗하고 명료하게 작성하는가?
+  - 면접관이 제안이나 조언을 할 때 어떻게 반응하는가?
+  - 지원자가 어떤 방식으로 생각을 전개하는가?
+  - 문제 해결만이 아니라 문제 해결을 위한 방법과 과정에도 얼마나 주의를 기울이는가?
+  - 페어 프로그래밍이기 때문에 가장 당연한 대응은 도움을 요청하는 것이다.
+  - 많은 단축키를 질문했고 모두 종이에 받아 적었다.
+  - 질문하는 것을 부끄러워하지 않아야 한다.
+- 맞춤형 면접
+  - 우리가 소중히 하는 가치가 무엇인가? 동료들로부터 어떤 종류의 태도를 기대하는가? 채용하려는 직무의 핵심 스킬은 무엇인가?
+  - 객관식 온라인 시험은 전혀 효과도 없고 바보같은 일이라고 생각한다.
+
+
+### 번트 홈런
+
+---
+- 사례에서, 펫 프로젝트에 사용한 기술, TDD 를 프로젝트에 적용하기 위한 접근방법, 도전적인 문제들, 다르게 해볼 수 있는 여지들 등에 대해서 말했다.
+- 업무 시간에는 허락되지 않는 배움의 욕구를 채우기 위해 개인 시간을 투자하고 있었다.
+
+→ 올바른 환경과 기회만 주어진다면 아주 훌륭한 개발자로 빛날 매우 전형적인 스타일.
+
+면접 때 특정 기술에 대한 지식이 아니라 지원자의 재능, 태도, 열정, 잠재성을 보아야만 한다.
+
+
+### 지원자와 회사 모두 면접을 어떻게 하는지 알아야 한다
+
+---
+- 경험 많은 개발자는 면접을 진행할 때 반드시 경험이 적은 주니어 개발자를 대동하여 참관하게 해야 한다.
+- 복수의 면접관이 참석하거나 면접관을 로테이션하면서 팀원 모두가 채용 과정에 참여하도록 하는 것도 바람직하다.
+
+
+### 요약
+
+---
+- 소프트웨어 장인이 직장을 찾을 때는 특정한 프로젝트나 펜시한 기술, 괜찮은 급여만을 쫓지는 않는다.
+- 소프트웨어 장인은 생산적인 파트너십과 아침에 일어날 때마다 일하러 가는 것이 행복한 그러한 직장을 찾는다.
+
 
 - [Notion link](https://www.notion.so/be86a3f5bde74497a18127add9219fb3)
