--- a/book/소프트웨어_장인.md
+++ b/book/소프트웨어_장인.md
@@ -620,4 +620,170 @@
 - 소프트웨어 장인은 생산적인 파트너십과 아침에 일어날 때마다 일하러 가는 것이 행복한 그러한 직장을 찾는다.
 
 
+## Chapter 11. 잘못된 면접 방식
+
+- 재능있는 개발자들은 금전적인 보상 수준보다도 자율성, 배움, 목적, 생산적 파트너십, 열정적인 사람들, 좋은 업무 환경과 같은 것들을 더 우선해서 따진다.
+
+### 똑똑한 척하는 면접관을 세운다
+
+---
+- 면접관이 지원자보다 똑똑하거나 더 우월해보이고 싶어해서는 안 된다.
+- 상황에 맞지도 않고 배배 꼬인 질문으로 똑똑한 척 하는 것은 금물이다.
+- 고분고분하게 맹목적으로 시키는 대로만 하지 않고, 당신의 팀이 더 나아질 수 있도록 도와줄 수 있는 파트너가 될 사람이어야 한다.
+- 지원자를 프로페셔널 개발자로서 대하고, 채용을 위한 평가나 취조가 아니라 당신이 존중하는 누군가와의 유익한 기술 토론이 되도록 면접을 이끌어야 한다.
+
+
+### 수수께끼식 질문을 던진다
+
+---
+- 직무와 전혀 관계 없는 바보 같은 질문은 하지 말아야 한다.
+- 팀 동료에게 흔히 하지 않는 질문이라면, 지원자에게도 삼가해야 한다.
+- 지원자를 바보로 만든다면, 면접을 계속하는 것이 의미가 없음을 설명하고 면접 기회를 준 것에 감사를 표하고 자리를 떠나자.
+
+
+### 인터넷 접속을 막는다
+
+---
+- 솔루션들을 탐색하고 더 나은 문제 대응 방법을 찾는 것은 소프트웨어 개발자로서 갖추어야 할 핵심적인 능력이다.
+- 지원자에게 종이나 화이트보드에 코드를 작성토록 하는 것은 참으로 바보같은 면접 방법이다.
+
+
+### 알고리즘 문제를 낸다
+
+---
+- 시스템의 주요 문제가 알고리즘이 아니라면 코딩 면접 때 알고리즘 문제 대신 실제 문제에 가까운 과제를 제시해야 한다.
+- 지원자가 비즈니스 도메인을 표현하고 솔루션을 설계할 역량이 있는지에 집중해야 한다.
+
+
+### 전화 면접을 한다
+
+---
+- 지원자가 최소한의 채용 요건을 갖추고 있는지 확인하는 것이다.
+- 해외에 있는 지원자를 면접해야 할 경우와 같이 어쩔 수 없을 때만 전화 면접을 사용하자.
+
+
+## Chapter 12. 낮은 사기의 대가
+
+- 개발자들의 낮은 사기는 소프트웨어 프로젝트 실패의 주된 이유 중 하나다.
+
+### 애자일 행오버: 낮은 사기
+
+---
+- 애자일 행오버에 빠진 회사들의 흔한 문제는 사기가 낮다는 것이다. 개발자들이 동료나 관리자, 아키텍트, 고객들에 대해 불평할 때가 많아지고 일이 재미없어서 하기 싫다는 이야기들이 들린다.
+- 이러한 상황에 처한 개발자들은 자신들이 그저 코딩 기계일 뿐, 아이디어를 내고 회사에 기여할 수 있는 프로페셔널로서 대우받고 있지 못하다고 느낀다.
+- 제대로 된 애자일 조직이라면 지식 노동자들이 일을 즐겁게 할 수 있게 하는 요건들, 즉 자율성과 목적의식을 제공할 수 있어야 한다.
+
+
+### 그저 '출퇴근'만 하는 개발자들로 인한 대가
+
+---
+- 열정적인 개발자들을 화나게 하는 것은 열정을 다해서 애플리케이션을 더 나아지게 하고 일하는 방식을 개선하려고 온갖 노력을 쏟는 동안 다른 개발자들이 그저 뒤에서 팔짱만 끼고 구경하거나 심지어 방해하는 것이 화가 날 뿐이다.
+- 항상 그렇지만 상황이 안 좋아지면 제일 먼저 가장 능력있는 개발자들이 떠나간다.
+- 프로젝트의 사람들은 서로 이야기하는 일도 드물었고 몇 달이 지나도록 같이 회식 한번 하지 않았다. 팀 단위로 점심을 먹거나 술자리를 함께하는 일도 추진했지만 한 두 명 밖에 나타나지 않았다.
+
+
+### 낮은 수준의 동기가 만드는 제약
+
+---
+- 회사가 좀더 나아지게 만들려는 노력들을 하지 않는 이유
+  - 자신에게 아무런 권한이 없다고 생각한다.
+  - 그런 일을 이끌어가야 할 당사자가 되고 싶지 않다.
+  - 그렇게 되기에는 복잡한 장애요인이 너무 많다.
+  - 뭔가 바뀌는 것이 가능하다고 믿지 않는다.
+  - 무엇이 더 나은 일인지 사람들의 동의를 받기 힘들다.
+  - 아무 상관 없다. 그냥 출퇴근만 하면 된다.
+
+
+### 개발자들에게 열정을 불어넣기
+
+---
+- 기존 개발자들에게 자극을 주고 동기 부여하는데 가장 효과적인 방법: 외부 소프트웨어 장인 수혈받는 것
+- 보통의 개발자와 소프트웨어 장인의 차이점 → 스스로 설정한 임무가 있다.
+  - 소프트웨어 장인은 고객에게 가치를 전달하고 자신을 둘러싼 사람들에게 영감을 불어넣기 위해 모든 노력을 아끼지 않는다.
+  - 방향을 제시하고 변화를 이끄는 데 두려움이 없다.
+  - 항상 최선을 추구하는 것은 내재된 본능과도 같다.
+  - 다른 사람에게 무엇을 하라고 명령하는 대신 다른 개발자들과 함께 앉아 페어 프로그래밍을 하면서 그들의 지식과 경험, 열정을 나눈다.
+  - 단순히 일을 완료하는 것 외에도 항상 다른 여러 개발자들의 멘토로서 행동하는 데 주의를 기울인다.
+  - 소프트웨어 장인은 항상 소프트웨어에 대해서 이야기하고 자신의 자기계발 활동을 다른 사람들과 공유하려 한다.
+- 데일리 스크럼 스탠딩업 미팅 때 "지난 미팅 이후 뭔가 새롭게 배운 것을 공유할 분 있습니까?" 라고 묻기
+- 기존의 개발자들이 새로 합류한 소프트웨어 장인들에게서 열정과 전문성을 엿볼 수 있으면, 자신들도 그렇게 되고 싶다는 동기가 부여된다.
+
+  → 개발자들이 스스로 만든 제품의 품질에 얼마나 신경을 쓰는지, 회사를 생각해서가 아니라 그 일 자체를 즐기기 때문에 그렇게 한다.
+
+- 개발자들이 생각하는 커리어와 열정에 대해 공유해야 한다. 개발자에게 동기를 부여할 수 있는 최선의 사람은 바로 동료 개발자다. 실력있는 개발자, 본받고 싶고 영감을 일으키는 개발자, 바로 소프트웨어 장인이야 말로 최고의 동기 부여가 될 수 있다.
+
+
+## Chapter 13. 배움의 문화
+
+- 상황 악화의 지름길: 개발자들이 새로운 규칙을 준수하도록 업무 고과나 보너스를 연계시키는 것.
+
+  → 소프트웨어 개발에서 그러한 접근 방식은 재앙에 가까운 결과를 가져올 뿐이다. 사람들에게 새로운 절차나 실행 관례를 강제한다고 조직을 변화시킬 수 없으며 우리는 배움의 문화를 만들어내야 한다. 사람들 스스로 모든 것을 더 나아지게 하고 싶어하는 동기를 부여할 수 있어야 한다.
+
+### 배움의 문화 만들기
+
+---
+- 배움과 자기계발의 열정이 가득하고 자기가 하는 일에 애정이 있으며 더 나은 방법을 발견하거나 새로운 것을 배웠을 때 흥분하는 그런 선배 개발자들을 보고 배운다.
+- 높은 수준의 동기가 부여된 사람들은 일을 재미있게 할 뿐만 아니라 항상 회사 바깥 세상에 관심을 갖는다.
+
+  → 회사 입장에서는 외부로부터의 혁신과 효율을 지속적으로 수혈받을 수 있는 큰 이득이 생긴다.
+
+- 명령을 하게 되면 의무가 되고 흥미를 끌기 어렵게 된다. 언제, 무엇을, 어떻게 배울지 개발자들 스스로 정해야 한다.
+
+- 북클럽에 가입하기
+  - 책을 하나 선택해서 동료들에게 그 책을 읽기 시작할거라고 공표하자.
+  - 그 책에 관심이 있거나 관련 내용에 대해 토론을 하고 싶다면 한 주에 한 번 정도 점심 시간이나 기타 여유 시간에 함께 모이자고 하자. 동료 중 한 명이라도 관심을 보인다면 북클럽을 시작할 수 있다.
+  - 아무도 관심이 없다면 동료들이 어떤 종류의 책이나 주제에 관심이 있는지 탐색해본다. 제안된 주제들을 모아서 다수가 관심을 보이는 주제 하나를 선택한다.
+  - 그래도 아무도 관심이 없으면 그냥 본이닝 원하는 책을 읽기 시작한다. 대신 휴식 시간이나 식사 시간같은 편안한 때 책의 내용을 공유하고 대화를 시도해보자.
+- 테크 런치 진행하기
+  - 팀원들에게 일주일에 한 번 정도 점심 시간에 기술과 관련된 난상 토론회 (여러 사람이 모여서 익숙하게 많이 생각하여 충분히 의논) 를 가지는 것을 제안해보자.
+  - 참여자 누구든 그냥 그 자리에서 생각나는 것을 아무거나 이야기하면 된다.
+  - 이 토론회를 업무의 연장으로 만들지는 않는 것이 좋다. 배움에 대한 것으로 만들어야 한다.
+  - 서로 다른 기술, 접근 방법, 테크닉, 서적 등 참여자 누구든 공유하거나 토론하고 싶어하는 것을 다룬다.
+  - 실제 업무에 반영해 좋을 것이 있다면 그것만을 위한 별도의 미팅을 잡는다.
+- 그룹 코드 리뷰하기
+  - 팀 전체를 하나로 만들 수 있다. 올바르게 수행하기.
+  - 주석은 주관적, 개인적으로 표현 되어서는 안된다.
+  - 누가 코드를 작성 하느냐는 중요하지 않다.
+  - 그룹 코드 리뷰 시간에 커밋 히스토리를 뒤지지 않는다. 비난할 사람을 찾기 위해 과거를 파헤치지 말고 미래를 변화시키는 데 집중한다.
+  - 주석은 반드시 객관적이고 생산적이어야 한다. 왜 그것이 엉망인지가 아니라 어떻게 코드를 개선할지에 집중해야 한다.
+  - 퍼실리테이터, 모두에게 발언권을 주고 누군가를 비난하는 상황이 생기지 않도록 한다.
+  - 큰 진전을 이룰 것이라 기대하지 않는다. 이슈 한 가지에 대해서 너무 오랫동안 이야기되더라도 개발자들이 원한다면 그냥 그렇게 한다.
+- 내부 학습 모임 만들기
+  - 두 사람만 있으면 내부든, 외부든 커뮤니티를 시작할 수 있다.
+  - 모임이 알차고 재미있게 되는 데 집중해야 한다.
+- 회사에서의 펫 프로젝트 시간을 허용하기
+  - 팀 내 누군가가 펫 프로젝트를 하고 있거나 하길 원한다면 그 사실이 회사 안에 알려지는 데 껄끄러움이 없도록 한다.
+  - 열정적인 개발자들은 새로운 아이디어, 기술, 테크닉으로 놀 수 있는 놀이터를 좋아한다.
+  - 주변에 펫 프로젝트를 하고 있는지, 없다면 새로 시작할 생각이 있는지 물어보자.
+- 외부 기술 커뮤니티와 교류하기
+  - 외부 커뮤니티를 통해 열정적이고 재능있는 수많은 개발자들과 함께 하면 나 자신에게 큰 도전이 된다.
+
+
+### 아무도 참여하려 하지 않는다면
+
+---
+- 모범을 보여라
+  - 당신 스스로도 하지 않으면서 어떻게 다른 사람들을 설득할 수 있겠는가? 팀에 열정을 불어 넣고 더 나은 일하는 방법을 추구하도록 하는 가장 효율적인 방법은 스스로 모범을 보이는 것이다.
+  - 새로운 길을 추구하는 열정적인 사람의 존재 자체가 팀 전체에 자극을 주는 열쇠일지도 모른다.
+- 관심을 보이는 사람들에게 집중하라
+  - 변화를 수용하는 사람들에 집중하자.
+  - 그들과 페어 프로그래밍을 하고, 테스트를 작성하고, 서로의 코드를 리뷰한다. 유익한 토론들을 하고 아이디어와 정보를 나눈다.
+- 강제하지 마라
+  - 개발자들을 학습 모임에 강제로 참석시키면 상황은 극도로 안 좋아진다. 대신 계속 초대장을 보내자.
+  - 개방된 커뮤니티의 원칙 중 하나는 '들어오는 사람이 초대 받은 사람이다' 라는 태도다.
+- 모두를 변화시키려 들지 말라
+  - 소수의 사람들로도 큰 진보를 만들어 나갈 수 있다.
+- 모임에 대한 약속을 제때하라
+  - '매주 수요일 12시' 같은 특정 날짜를 정해서 모임을 진행하는 것이 좋다.
+- 허락을 구하지 마라
+  - 개인 시간을 들여 공부하고 연습하는 데 상사의 허락을 구할 필요는 없다.
+  - 업무 시간에 공부를 하더라도 상사에게 허락을 구하지 않는다. 책임있게 행동하면 될 뿐이다.
+  - 팀이 스스로 더 나아지기 위해서 훈련하는 것에 대해 민감하게 반응하고 불평할 관리자는 없다.
+  - 단, 학습 활동 때문에 업무를 소홀히 해서는 안 된다. 상식적으로 책임있게 행동해야 한다.
+- 리듬을 만들라
+  - 건강하고 지속되는 커뮤니티를 만드는 비결.
+  - 당신이 없어도 모임이 진행되게 하는 것이 매우 중요하다.
+- 배움의 문화를 만드는 것은 개발자를 포함한, 모두가 해야할 일이다. 매일 할 수 없다면 일주일에 한 번만 하자.
+
+
 - [Notion link](https://www.notion.so/be86a3f5bde74497a18127add9219fb3)
