--- a/book/소프트웨어_장인.md
+++ b/book/소프트웨어_장인.md
@@ -786,4 +786,231 @@
 - 배움의 문화를 만드는 것은 개발자를 포함한, 모두가 해야할 일이다. 매일 할 수 없다면 일주일에 한 번만 하자.
 
 
+## Chapter 14. 기술적 변화의 실행
+
+- 상당수의 개발자들이 사춘기적 맹신에 빠져있다.
+  - 훌륭한 소프트웨어를 만들어 내는 데 자기만의 비법이 있다고 생각하고 다른 것들은 무시해 버린다.
+
+### 회의론의 종류
+
+---
+- 무지
+  - 특정 도구나 실행 관례를 쓰지 않는 주요한 이유가 단지 잘 몰라서인 경우이다.
+  - 무지에 대한 본능적인 두려움 때문에 새로운 아이디어가 제안되면 깊이 고민해보지 않고 거부부터 한다.
+- 대중
+  - 어떤 결정을 내리기에 자신의 경험이 충분치 않다고 생각한다.
+  - 자신감이 부족하여 중요한 결정들을 더 똑똑하고 경험 많은 개발자들에게 맡기려 한다.
+- 냉소주의
+  - 자신이 남보다 잘났음을 증명하려 든다.
+  - 사사건건 딴지를 걸고, 사소한 것을 꼬투리 잡아 작은 문제를 큰 문제로 이슈화시킨다.
+  - 똑똑해 보이는 것을 더 중요하게 여긴다.
+  - 새로운 것을 받아들이지 않는 이유 중 하나가 그들 스스로의 약점을 드러내고 싶지 않아서일 수도 있다.
+- 트라우마
+  - 실패한 경험이 있는 사람들
+- 너무 바쁜
+  - 너무 바빠서 뭔가를 할 시간이 전혀 없는 사람들
+  - 어떤 일의 장기적인 비용을 보지 못하고 근시안적인 판단을 한다.
+- 상사
+  - 상사가 기술 배경이 없다면 당신이 제안하는 것들이 어떤 장점이 있는지 이해하지 못할 가능성이 높다.
+  - '뭔가 자동화 하는 도구를 만들자' → '프로젝트 운영 비용을 줄이자' 라고 이야기해야 한다.
+  - 상사가 개발자 출신이라면 더 큰 어려움에 봉착할 수도 있다.
+    - 내가 개발할 때는 TDD 같은 것을 안 해도 소프트웨어를 제때 개발하는 데 아무런 문제가 없었다. 등
+    - 기술 관리자들이 소프트웨어 개발 스킬 때문에 승진한 경우는 극히 드물다.
+  - 여전히 코딩을 하는 관리자들이라면 위에서 '너무 바쁜'류에 속하는 경우도 있다.
+- 몰상식
+  - 가장 최악의 타입이다.
+  - 다른 타입들의 경우 새로운 아이디어가 내세우는 전제들에 대한 거부감과 의심이 원인이며 오류가 있더라도 합리적이고 논리적인 판단을 한다.
+  - 하지만 몰상식한 사람들을 대상으로는 불가능하다.
+  - 논리적으로 반대할 내용이 없으면 이 문제에서 저 문제로 끊임없이 옮겨 다닌다.
+    - 그렇게 하면 성능 문제가 있을 것 같다. 자동화 테스트로는 사람이 하는 것만큼 효과를 낼 수 없다. 그리고 그 프레임워크는 보안 문제가 있다고 들었다. 등
+    - 말이 막힐 때마다 이 부분에서 저 부분으로 아무런 합리적 근거도 없이 생트집을 잡는다.
+  - 단지 제안 내용을 받아들이기 싫을 뿐이다.
+    - 제안자를 그냥 개인적으로 싫어하는 것일 수도 있다. 어쩌면 퇴사를 생각하고 있거나, 다른 벌여놓은 일이 많아서 더 이상 새로운 일을 만들기 싫은 경우일 수도 있다.
+    - 실제 내막을 알기는 어렵다.
+- 무념무상
+  - 그냥 뭐가 어떻게 되든 아무런 상관을 하지 않는다.
+  - 좋은 아이디어를 대충 엉망으로 구현해서 결과적으로 좋은 아이디어를 나쁜 아이디어로 만든다.
+    - 나쁜 테스트 코드는 없느니만도 못하다.
+- 피해망상
+  - 위험한 개발자들이다.
+  - 회사가 자신에게 피해를 주고 있다고 생각한다.
+  - 자신이 일하고 있는 회사를 싫어하고 불평불만과 회사에 대한 험담이 잦다.
+  - 이런 사람의 존재는 팀을 파괴하고 개발자들끼리 서로 비난하게 한다.
+  - 더 최악인 것은 이런 개발자들은 절대 회사를 나가지 않는다. 대신 회사가 자신을 해고해서 거꾸로 회사를 고소할 수 있을 때까지 기다린다.
+- 무능력
+  - 제안의 본질을 파악하지 못한다.
+  - '무지'에 속한 사람들과는 확연히 구분되는 인지능력, 이해능력의 부족을 보인다. 상황을 명확하게 보지 못한다.
+  - 막연하게 생각하며 이들이 하는 제안은 왜곡된 사실을 기반으로 한 어디선가 주워들은 설익은 아이디어들뿐이다.
+  - 이들은 개발을 그냥 월급을 받기 위한 노동으로만 본다. 그리고 무언가 노력을 하더라도 소프트웨어 개발자라는 직업이 그들의 적성에 맞지 않다는 것을 계속해서 증명할 뿐이다.
+  - 이들을 상대하면 한숨만 나온다.
+- 상아탑 아키텍트
+  - '몰상식'과 함께, 소프트웨어 장인이 부딪힐 수 있는 최악의 회의론자들 중 하나다.
+  - 모든 것을 알고 있다고 생각한다. 그 어느 개발자보다도 자기가 더 똑똑하다고 자신한다.
+  - 모든 기술적 결정에 자신이 책임져야 한다고 이야기하길 좋아하지만 실제로 책임을 지는 일은 극히 드물다.
+  - 일이 잘되면 자신의 덕이고, 잘못되면 그들의 지시를 '제대로' 따르지 않은 개발자 탓이다.
+  - 자신의 아이디어가 아니면 나쁜 아이디어로 취급한다.
+  - 이들은 코드를 작성하지 않기 때문에 항상 자신의 존재 이유를 증명해야 한다는 압박이 있다.
+  - 이들이 취미로 하는 일은 인터넷에서 새로운 기술 약어를 찾는 것이다.
+    - 어느 비싼 기술에 대해 광고 자료를 읽고서 멋진 파워포인트 문서를 만들고, 신참 개발자들에게 프로토타입을 만들어 보라고 시킨다.
+    - 그리고 관리자를 꼬드겨 개발자들이 자신의 가이드를 따르도록 명령하게 만든다.
+  - 프로젝트를 위한 기술 스택을 정의하는 것이 자신의 업무라고 믿는다.
+- 좌불안석
+  - 자신이 다른 사람으로 대체되어 직무를 잃거나 해고 될까봐 걱정한다.
+  - 사업의 핵심이 기술이 아닌 회사들, 개발자들의 능력을 제대로 평가할 사람이 없는 조직에서 흔하게 만날 수 있다.
+  - 회사에서 자신의 실제 가치를 알게 될까봐 두려워한다.
+  - 이들 앞에 나타나는 소프트웨어 장인을 그들의 실체를 폭로할 위협으로 바라본다.
+- 팬보이
+  - 특정 주제나 관점에 광적으로 완전히 전념하는 사람들이다.
+  - 특정 도구나 언어 프레임워크에만 아주 오랫동안 전념해서 해당 기술에는 전문가다.
+  - 그것만이 모든 것에 대한 최고의 해결책이라고 믿고 다른 모든 대안들을 거부한다.
+  - 이들의 반대에 부딪힌다면 아주 긴 시간 동안 뜨거운 논쟁을 벌일 준비를 해야한다.
+
+### 준비
+
+---
+- 진정으로 당신을 둘러싼 것들을 바꾸고 싶다면 몇 가지 꼭 갖춰야할 것들이 있다. 가장 중요한 것은 용기다.
+- 논쟁을 두려워해서는 안 된다. 정직함과 투명함은 소프트웨어 장인이라면 반드시 가져야 할 핵심 가치다.
+- 더불어 스스로에 대한 자신감도 필요하다.
+  - 자기가 하는 말이 무엇인지 스스로도 제대로 모르면서 다른 사람을 설득할 수는 없다.
+- 단순함을 추구해야 한다.
+  - 어떤 제안을 말하기 전에 명료하게 정리부터 해야한다.
+  - 누구든지 이해하기 쉽게 만들어야 한다. 가능하면 예제를 이용하는 것이 좋다.
+  - 내용도 중요하지만 커뮤니케이션을 얼마나 잘 하느냐가 큰 영향을 미친다.
+- 상대방의 언어로 말해야 한다.
+  - 당신의 제안이 가져올 이익을 그들의 관점에서 그들의 언어로 말해야 한다.
+- 말할 내용에 대해 스스로 제대로 이해하고 있어야 한다.
+  - 연구하고, 실험하고, 연습해야 한다.
+  - 어떤 반대 의견이나 문제 지적이 있을지 미리 생각하고 수용될만한 답을 미리 준비해둬야 한다.
+  - 제안이 가진 단점이나 예상되는 문제 상황은 질문이 나오기 전에 미리 밝혀야 한다. 특정 부분에 충분한 정보가 없다면 그 부분을 미리 투명하게 고백해야 한다.
+    - 제안이 가진 결정들을 미리 밝히는 것은 당신이 충분히 깊이 생각했다는 것을 보여주고 제안 자체에 대한 신뢰성을 높인다.
+- 상대방을 존중해야 한다.
+  - 제안을 듣는 상대방을 바보처럼 느끼게 해서는 안된다.
+  - 무례하고 공격적인 태도는 사람들을 방어적으로 만들어 설득 자체가 불가능해진다.
+- 경청하는 법을 배운다.
+  - 당신만이 좋은 아이디어를 갖고 있다고 오판해서는 안된다.
+  - 사람들은 관점이 서로 다르다. 당신이 인지하지 못한 것들이 많이 있을 가능성이 다분하다.
+  - 당신만의 결론을 내리기 전에 모두의 말을 경청하고 정리해보아야 한다.
+
+### 기술적 변화를 시작하는 방법
+
+---
+- 신뢰를 쌓으라
+  - 동료 개발자들이나 관리자 고객들과 신뢰를 쌓는 가장 좋은 방법은 지속적으로 품질 좋은 소프트웨어를 딜리버리하는 것이다.
+    - 설계, 변수나 함수의 네이밍, 의미있고 가독성 높은 테스트 코드, 중복이 없고 장황하지 않은 코드같은 것들.
+  - 사람들은 단순히 그냥 무언가를 하자고 하는 사람보다 자신의 열정을 보여주는 사람을 훨씬 더 잘 따른다.
+  - 역량이 있어야 한다.
+    - 사람들이 당신이라면 그 일을 해낼 수 있을 것만 같은 느낌이 들어야 한다.
+    - 당신이 그들을 이끌어줄 것이라고 느껴야 한다.
+- 전문성을 확보하라
+  - 새로운 기술을 제안하기 전에, 본인 스스로 충분히 이해해야 한다.
+  - 그 기술을 이리저리 살펴보고, 프로토타이핑 해보고, 관련 전문가와도 이야기해보고, 유사한 다른 기술과 비교도 해보아야 한다.
+  - 당신이 필요로 하는 것을 그 기술을 이용해 만들어낼 수 있어야 한다.
+  - 무엇보다도 그 기술의 활용법을 다른 사람에게 가르쳐줄 수 있어야 한다.
+    - 개인 시간을 들여서까지 새로운 기술이나 실행 관례를 스스로 공부하고 마스터하려는 사람은 많지 않다.
+  - 경험이 쌓일수록 당신의 영향력은 커진다.
+    - '무지'에 빠진 사람들을 눈을 뜨게 할 수 있다.
+    - '대중'들은 당신 스스로 제대로 개념을 갖추었다고 인식하고 함께할 만한 사람으로 여길 것이다.
+    - '냉소주의자'들은 당신의 자신감과 깊은 지식들 앞에 힘을 못 쓸 것이다.
+    - '트라우마'가 있는 사람들이 어떤 부분을 잘못 짚었는지, 걱정하는 부분이 무엇인지 찾을 수 있게 해준다.
+    - 전문성이 강화되면 '상아탑 아키텍트'나 '팬보이'와의 논쟁을 이겨낼 무기가 되어줄 것이다.
+      - 논쟁에서 지더라도 이전보다 더 많은 지식이 쌓일 것이기 때문에 더 나은 프로페셔널이 된다.
+      - 소프트웨어 장인에게 있어서 그런 상황은 상호 이득이다.
+- 모범을 보여 사람들을 이끌라
+  - 직접 보여주면서 따라하게 하는 것이 가장 좋은 방법이다. ex> TDD
+  - 어떤 규범이나 실행 관례들은 마스터하는데 몇 년이 걸리기도 한다.
+  - 당신이 직접 기술을 시연하고 멘토역할까지 한다면 당신의 제안을 거절하기가 어려워질 것이다.
+- 신중하게 싸울 곳을 정하라
+  - '나한테 권한만 있다면 어느 누구의 방해도 받지 않고 내가 원하는 사람들로만 팀을 꾸려서 단기간에 조직을 바꿀 수 있을텐데...'
+    - 너무나 편협하고, 비효율적이고, 잠재적으로 스스로에게 해로운 생각이다
+    - 무엇보다도, 그런 일은 절대 일어나지 않는다.
+    - 혼자서 모든 이슈와 조직 전체를 상대로 두고 싸울 수는 없다. 한 번에 한 가지씩 신중하게 싸울 곳을 골라야 한다.
+  - 조직 문화 바꾸기
+    - 새로 합류하는 팀원이 사전에 우리가 갖고 싶어하는 문화와 합치되도록 한다.
+  - TDD와 페어 프로그래밍 도입하기
+    - 많은 사람들에게 이야기를 하고 여러 종류의 회의론자들이 던질 수 있는 난감한 질문들에 답할 준비가 되어 있어야 한다.
+    - 관료적이고 정치적인 조직이라면 변화를 이끌어 낼 수 있는 핵심 역량이 좋은 코드를 작성할 수 있는 능력이 아닌, 다른 것일 수 있다.
+  - 정말 의미있는 곳에 노력을 집중하고 더 빨리 가치를 얻을 수 있는 싸움에 우선순위를 두자.
+- 점진적으로 반복, 관찰, 수용하라
+  - 다음 스프린트부터 당신과 다른 개발자들이 직접 스토리를 골라 새로운 설계를 시도해보자고 할 수 있다.
+  - 그 스토리가 끝나면 모두에게 시연하고, 팀 차원에서 그 새로운 설계를 수용할지 결정하도록 할 수 있다.
+  - 의사결정 과정에 사람들이 참여할 수 있게 하는 것이 중요하다.
+    - '이번 작업 주기에서는 이 접근방법을 시도하고 다시 리뷰해봅시다'
+    - 과정에 직접 참여하고 있다고 느끼게 되면 서로 싸우기보다는 훨씬 협조적인 분위기가 된다.
+  - '이번 한 작업 주기 동안만 소프트웨어의 일부에 대해서 적용해봅시다. 그러고 나면 좀더 구체적인 부분에 대해서 의논할 수 있습니다. 결과가 좋지 않다면 다시 되돌리면 됩니다. 한번 시도해보는 것 뿐 결정되는 것은 없습니다.'
+
+### 두려움과 자신감 부족
+
+---
+- 두려움이 있는 데다가 자신감이 부족하면 회사는 관료적이고 정치적으로 변한다.
+  - 잘못되고 비효율적인 솔루션이라는 것을 모두가 알고있지만 아무도 상사에게 문제 제기하려 들지 않는 상황도 겪어보았을 것이다.
+  - 도대체 언제까지 그냥 침묵하고만 있을 것인가?
+- 두려움은 프로페셔널로서 행동하고 자신의 의견을 표현하는 것을 막고, 무능함은 우리를 둘러싼 일들을 올바른 방향으로 변화시키기 위한 싸움을 할 수 없게 한다.
+- 무능한 사람들만이 일자리를 불안해 한다.
+  - 무능하고 비겁한 사람들은 일을 제대로 해내는 것보다 다른 사람의 뒤에 숨어서 실수를 떠 넘기고, 승진을 위한 정치 게임에 몰두하기를 좋아한다.
+- 프로페셔널 개발자라면, 진정한 소프트웨어 장인이라면, 그에 맞는 윤리의식과 행동원칙이 있다.
+  - 소프트웨어 장인은 자신의 일과 커리어를 스스로 통제한다.
+  - 승진하기 위해 정치 게임을 해야할 이유도, 일자리 하나에 목을 매야 할 이유도 없다.
+- 당신의 주변을 바꾸고 싶다면, 두려움을 버려야 한다.
+  - 준비하고, 연습하고, 독서하고, 공부해서 스스로 도달할 수 있는 최고의 개발자로 거듭나야 한다.
+  - 무슨일이 일어나든 항상 진실을 말해야 한다.
+
+### 상사를 설득하는 방법
+
+---
+- 나의 상사를 어떻게 하면 설득할 수 있을까? → 설득할 수 없다.
+- 일의 진척 상황에 대해서 정직하고 투명하게 말해야 한다.
+- 테스트와 리펙토링은 어떤 종류의 코딩 업무이든 당연히 내재되어 있는 사항이다.
+  - 상세사항을 많이 노출할수록 관리자가 당신에게 더 세세하게 업무 지시를 하고싶게 만든다.
+
+### 팀이 TDD를 수용하도록 설득하는 방법
+
+---
+- 팀에서 가장 열정적인 동료에게 당신의 코드 구현을 도와달라고 하자.
+  - 작업 내용을 설명하고 한 두 시간 동안 TDD 로 구현해보자고 제안해보자.
+  - 동료가 아무도 TDD 를 쓰지 않는다고 반문하면 상관 없다고 하자.
+    - '그냥 재미로 한번 해봅시다' 라고 하자.
+  - red → green 으로 바뀔 때의 성취감을 그 동료와 함께 나눈다.
+    - 버그에 대한 두려움 없이 코드를 리펙토링 할 수 있다는 자유로움을 보여주자.
+  - 핑퐁 코딩도 해보면 더욱 좋을 것이다.
+    - TDD 의 한 방법으로 한 사람은 기능 구현, 다른 사람은 테스트를 작성하는 것이다.
+    - 테스트가 하나씩 통과될 때마다 역할을 바꾼다.
+  - 한 가지 주의할 것은 함께 기분좋게 즐길 수 있어야 한다.
+- 개발자는 습관대로 하려는 편이고 자기 주관이 뚜렷한 경우가 대부분이다. 그냥 가서 해보자고 말한다고 순순히 따라오지는 않는다.
+- 실행 관례를 전파하는 가장 효율적인 방법은 모범을 보이는 것이다.
+
+### 회의론자들을 상대하는 방법
+
+---
+- 틈틈이 공부하고 준비해서 기술의 사용법을 시연할 수 있을 정도로 역량을 키우면 변화를 이끌어 나가는데 큰 힘이 된다.
+- 커뮤니케이션을 상대방의 수준에 맞게 잘 하는 것도 중요하다.
+- 의사 결정 과정에 모두가 참여하도록 만드는 데 주의를 기울이자.
+  - 무언가를 더 나아지게 만드는 데 목적을 두어야 한다.
+  - 스스로 상사가 되거나 모든 개선 사항에 자신의 업적을 주장하려는 데 목적을 두어서는 안 된다.
+  - 팀의 여느 개발자와 같은 위치에서 제안해야 한다.
+- 롤모델이 되어야 한다.
+  - 열정을 공유하고, 모범을 보임으로써 사람들을 이끌고, 정직하고 투명해야 한다.
+  - 자신감을 축적하고 당신이 아는 것을 다른 사람들에게 가르쳐주는 행위는 주변 사람들에게 신뢰를 쌓는 최선의 방법이다.
+  - 누군가가 따르고 싶어하고, 조언을 듣고 싶어하는 사람이 되어야 한다.
+- '몰상식'한 사람들은 무시하자. 그러한 사람들을 상대해서 남는 것은 스트레스와 고혈압 뿐이다.
+- '상아탑 아키텍트'는 다루기 가장 힘든 종류의 회의론자다.
+  - 소프트웨어 장인은 소프트웨어를 개발할 때 보다 애자일스러운 접근을 고려하지만, 상아탑 아키텍트는 초기부터 큰 설계를 밀어붙인다.
+  - 잘못된 아키텍처 설계로 인해 많은 개발자들이 고통받을 때 그는 아무런 고통도 느끼지 못한다.
+  - 비즈니스 담당과 가깝게 지내면서 뭔가 잘못될 때마다 개발자들을 희생양으로 삼는다.
+  - 우리가 취할 수 있는 행동 중 하나는 수동적인 공격
+    - 상아탑 아키텍트가 자신의 결정에 책임질 수 밖에 없도록 만드는 것이다.
+    - 최후의 수단이라고 말하고 싶다.
+- '피해망상'에 빠진 사람들을 성공적으로 구해낸 기억이 별로 없다.
+  - 회사를 나가지 않는 대신, 회사에 들러 붙어서 저주하고 불평하고 업무를 망친다.
+  - 최선의 방법은 이들을 잘 대해주고 팀의 구성원으로서 잘 융합하도록 돕는 것이다.
+- 진정한 소프트웨어 프로페셔널은 권한에는 항상 책임이 따른다는 것을 이해하고 있다.
+  - 권한을 갖고 싶다면, 책임질 수 있는 준비를 해야한다.
+
+### 이 모든 것을 다 챙겨야만 하는가?
+
+---
+- 소프트웨어 장인이라면, 기술적인 역량 뿐 아니라 주니어 개발자들을 위한 롤 모델 역할도 할 수 있어야 한다.
+- 소프트웨어 장인은 정직하고 투명해지기를 두려워하지 않는다.
+- 소프트웨어 장인은 사람들이 듣고싶어 하는 말이 아니라 진심을 말하며 자신의 행동에 책임을 지고 프로젝트를 위해 최선이라면 싸우기를 주저하지 않는다.
+
+
 - [Notion link](https://www.notion.so/be86a3f5bde74497a18127add9219fb3)
