[TIL/book] 소프트웨어 장인 (~ Chapter 16. 소프트웨어 장인으로서의 커리어)

--- a/book/소프트웨어_장인.md
+++ b/book/소프트웨어_장인.md
@@ -1013,4 +1013,249 @@
 - 소프트웨어 장인은 사람들이 듣고싶어 하는 말이 아니라 진심을 말하며 자신의 행동에 책임을 지고 프로젝트를 위해 최선이라면 싸우기를 주저하지 않는다.
 
 
+## Chapter 15. 실용주의 장인정신
+
+### 품질은 선택사항이 아니다
+
+---
+- 보통 품질의 코드를 목표로 하는 회사들은 형편없는 코드를 내놓는 경우가 대부분이다.
+  - 쓰레기 더미가 굴러 점점 커지면 싼 것이 더 이상 싸지 않게 된다.
+  - 버그 숫자가 늘어나고 새로운 기능을 추가하는 데 시간이 늘어나며 전체 애플리케이션을 다시 만들자는 이야기가 수면 위로 떠오른다.
+- 현실적으로 시간과 돈은 마음대로 늘릴 수 있는 것이 아니다.
+  - 보통의 경우라면 최대한 품질을 확보하면서도 낮은 비용으로 빨리 공사가 끝나야 한다.
+
+### 좋은 품질은 비싸고 시간이 오래 걸릴까
+
+---
+- 소프트웨어 장인은 익스트림 프로그래밍(XP)의 실행 관례와 애자일 원칙을 습관화하고 있다.
+- 기능 구현을 완료했다는 의미는 그 기능이 상용 시스템이나 이와 비슷한 내부 검증 환경에 전개되었다는 의미
+  - 경험 많은 장인으로 이루어진 팀은 하루에도 몇 번씩 수정된 소프트웨어를 배포할 수 있다.
+  - 소프트웨어 장인은 지속적인 통합과 프로젝트 초기부터의 제품 딜리버리를 목표로 하기 때문에 소프트웨어 품질로 인해 상용 릴리즈가 지연되는 일은 가정에 없는 사항이다.
+  - 소프트웨어 장인은 테스트 주도 개발과 같은 실행 관례들을 마스터하고 있어서 실행 관례의 준수로 인해 업무 속도가 늦어진다는 것은 있을 수 없는 일이다.
+  - 애플리케이션을 수작업으로 테스트하느라 시간을 낭비할 필요도 없고 버그를 고치느라 업무가 중단되지도 않는다.
+- 실행 관례를 무시하는 대신 경험 많은 소프트웨어 장인을 더 많이 확보하여 팀 구성원들의 학습 곡선을 당기고 멘토링하는 데 관심을 기울여야 한다.
+
+### 리펙토링
+
+---
+- 레거시 코드를 대상으로 작업할 때는 최소한 수정한 부분만큼은 원래보다 깨끗하게 만들어 놓아야 한다.
+- 새로운 기능을 추가하기 전에 해봐야 할 질문
+  - 레거시 코드는 새 기능을 받아들일 준비가 되어있는가?
+  - 수정해야 할 코드량은 어느정도 되는가?
+
+  → 먼저 레거시 코드를 OCP 원칙에 따라 리펙토링 하여 새 기능을 받아들이기 쉬운 상태로 만들어야 한다.
+
+- OCP 원칙: 확장에는 열려있고 변경에는 닫혀있다.
+
+### 비범함과 평범함
+
+---
+- 열정적인 개발자들은 코드를 만드는 일을 사랑한다.
+  - 그들이 만들고 사용하는 아키텍처와 디자인 패턴들을 자랑스러워 한다.
+
+- 비범한 개발자 vs 평범한 개발자를 가르는 기준
+  - 어떤 방식으로 그것을 동작하게 만드느냐.
+  - 비범한 개발자는 요구사항을 충족하는 가장 단순한 코드를 만들어 경험이 적은 개발자가 이해하는 데 아무런 문제가 없도록 한다.
+  - 단순하고 우아한 방법으로 해결하는 것은 복잡하고 과잉된 방법으로 해결하기 보다 훨씬 더 어렵다.
+  - 잘 작성된 코드는 단순하고, 작고, 테스트 가능하며 이해하기 쉽다.
+
+### 단순한 설계를 위한 네 가지 원칙
+
+---
+- 단순한 설계를 위한 네 가지 원칙
+  1. 모든 테스트를 통과해야 한다. (모든 테스트의 통과)
+  2. 명료하고, 충분히 표현되고, 일관되어야 한다. (명료성의 최대화)
+  3. 동작이나 설정에 중복이 있어서는 안 된다. (중복의 최소화)
+  4. 메서드, 클래스, 모듈의 수는 가능한 적어야 한다. (구성요소의 최소화)
+
+- 중복 제거보다는 명료함을 항상 우선시하자.
+  - 가이드 라인: 좋은 네이밍과 비즈니스 콘셉트를 잘 투영한 추상화에 집중한다.
+  - 도메인 기반 설계, SOLID 원칙과 결합되면 괜찮은 코드를 만들어 낼 수 있다.
+
+- 패턴을 위한 리펙토링
+  - 적시(Just-in-Time)설계: 새로운 기능을 추가하기 전에 기존 코드를 수정해서 방식을 추상화한다.
+  - 추상화를 도입할 때마다 좀더 이해하기 어려워지는 비용이 발생한다.
+    - 런타임에 어떤 급여 방식이 사용될지 직접적으로 알 수가 없다.
+  - 당장의 합당한 이유 없이 단지 '미래를 대비해야 한다'는 모호한 전제로, 초기부터 추상화를 하면 애플리케이션이 엉망이 된다.
+
+### 장인정신과 실용주의
+
+---
+- 실용주의가 없는 장인정신은 장인정신이 아니다.
+  - 장인이 가장 중요하게 초점을 맞추는 것은 고객의 만족이다.
+  - 품질은 물론이고 시간과 비용도 고객 만족을 위한 구성요소다.
+  - 빨리 작성한 코드가 지저분한 코드라는 것을 의미하지 않는다.
+
+
+## Chapter 16. 소프트웨어 장인으로서의 커리어
+
+- 소프트웨어 개발자는 멋진 직업이다.
+  - 주변을 둘러보면 오늘날 생산되는 거의 모든 것들이 소프트웨어의 뒷받침으로 가능하다.
+  - 소프트웨어는 우리가 세상을 글로벌한 관점에서 볼 수 있도록 해준다.
+  - 어떻게 우리의 일을 자랑스럽게 생각하지 않을 수 있을까?
+  - 어떻게 우리의 일을 그저 출퇴근하는 생계수단으로만 치부할 수 있나?
+  - 이토록 중요한 일을, 어떤 때는 생명에 영향을 미치는 그런 일을, 어떻게 소중히 여기지 않을 수 있나?
+  - 소프트웨어 개발자들은 우리가 살고 있는 세상이 진화해 나가는 데 꼭 필요한 존재다.
+
+### 장인의 길
+
+---
+- 열정: 소프트웨어 장인은 소프트웨어 개발과 자신의 직무에 열정적이다.
+  - 문제를 단순한 방법으로 푸는 데 열정적이다.
+  - 배우고 가르치고 공유하는 데에도 열정적이다.
+  - 소프트웨어 산업이 진화하도록 돕는 데도 열정적이다.
+  - 그들의 코드를 공유하고, 초보 개발자들을 멘토링하고, 블로그/책/동영상/대화 등을 통해 그들의 경험을 공유하는 데도 열심이다.
+  - 기술 커뮤니티 활동에도 열정적이다.
+  - 소프트웨어 장인은 겸손하다.
+  - 항상 더 나은 개발자에게 무언가를 배울 자세가 되어있고, 경험이 적은 개발자들을 돕기를 주저하지 않는다.
+
+- 장인은 일종의 삶의 철학이다.
+  - 우리의 삶 전체에 걸쳐서 최선을 다해 역량을 마스터할 과업으로 소프트웨어 개발을 선택한 것이다.
+  - 항상 최고의 코드를 만들도록 다른 것들을 희생해서라도 계속해서 배우고 남을 도우리라는 각오를 하는 것이다.
+  - 소프트웨어 장인으로서의 삶은 아름다운 코드를 작성하기 위한 일생에 걸친 헌신과도 같다.
+
+- 장인이 된다는 것은 새로운 것에 대해 호기심을 가지고 실험한다는 것과 같은 의미다.
+  - 장인은 특정 도구, 개발 언어, 프레임워크에 독단적인 고집을 부리지 않는다.
+  - 특정 도구를 종교적으로 신봉하지는 않더라도 최선이라고 알려진 몇몇 조합들에 대해서는 완전하게 마스터하고 있어야 한다.
+  - 마스터한 도구들이 없다면 장인이라고 할 수 없다.
+
+- 장인은 자신이 떠나고 난 후 스스로 부끄러운 일로 떠올리는 상황을 만들지 않는다.
+  - 장인은 긍정적인 일들로 연상되는 존재여야 한다.
+  - 통찰력 있는 기여, 열정, 지식, 훌륭한 동료로서 인정받는다면 더할나위 없다.
+
+- 정직과 용기
+  - 소프트웨어 장인이 갖추어야 할 핵심적인 자질이다. 장인의 커리어는 정직과 용기 위에 세워진다.
+  - 필요한 상황에서 고객에게 '아니오'라고 말할 수 있는 것을 의미한다. → 항상 대안을 제시해야 한다.
+    - '이것은 제대로 동작할 수 없습니다. 하지만 대신 저것을 시도해 볼 수 있습니다.'
+    - '완료 일정을 맞추지 못할 가능성이 매우 높습니다. 하지만 범위를 줄여서 가장 중요한 기능을 먼저 일정내에 작업하고, 나머지들은 여건에 맞추어 최대한 빨리 진행해 볼 수 있습니다.'
+    - '안타깝습니다만 요구하시는 내용은 기대하는 일정 안에 완료될 수가 없습니다. 이해관계자들에게 이야기해 볼 것을 제안합니다. 그리고 대안에 대해 회의를 소집했으면 합니다. 위험이 너무 크기 때문에 요구하시는 대로는 실행이 어렵습니다.'
+
+### 커리어의 진전
+
+---
+- 개발자들을 모아놓고 '당신의 커리어 목표는 무엇입니까? 몇 년 안에 어떤 위치에 있기를 바랍니까?
+  - '개발자이고 싶다'라고 대답하는 사람: '저는 서른 다섯입니다. 저는 낙오자인 것이 매우 자랑스럽습니다.'
+- 개발자들을 고급 기술을 가진 프로페셔널로 인지하지 못하는 회사들은 장인을 구할 수 없을 것이다.
+
+- 다른 커리어 사다리: 관리자나 아키텍트가 되는 개발자는 소프트웨어 개발 직능의 사다리를 오른 것이 아니라 사다리 자체를 바꾼 것이다.
+
+### 여정과 이정표
+
+---
+
+- 성공한 소프트웨어 장인은,
+  - 스스로의 커리어를 매우 신중하게 계획한다.
+  - 무언가를 배우고 더 나은 프로페셔널이 되기 위한 기회들을 찾는다.
+  - 다음 단계를 위해 앞서 보고, 계획하는 것은 성공적인 커리어를 위해 핵심적이다.
+
+- 새로운 직장을 찾는다는 것
+  - 내가 지금 가진 지식과 시간을 제공해서 최대한 많은 급여를 대가로 받겠다 → 근시안적인 생각
+  - 오래 지속되고 성공적인 커리어에 관심을 기울이는 프로페셔널이라면 직장은 급여 이상의 의미가 있다.
+
+- 직장은 커리어를 위한 지속적인 투자다.
+  - 우리의 열정과 헌신 그리고 업무 외 개인 시간을 들여 확보한 지식들을 투자하여 일터를 더 나은 곳으로 만든다.
+  - 단순히 일을 하는 곳이 아니라 배우고 성장하는 장이 되게 한다.
+  - 로버트 마틴은 단순히 주어진 업무에만 집중한 적은 한번도 없다.
+    - 항상 더 많은 것을 제공하고 더 많은 일을 수행해서 내 주변의 모두가 더 나아지도록 노력했다.
+    - 이런 것들은 내 일을 위한 투자일 뿐만 아니라 개인의 커리어를 위한 투자이기도 하다.
+
+- 기대하는 이익
+  - 특정 기술이나 산업을 접한다.
+  - 새로운 형태의 프로젝트를 경험한다.
+  - 다른 스킬을 개발할 수 있는 기회를 얻는다.
+  - 다른 역할 또는 다른 형태의 책임을 수행한다.
+  - 금전적인 이익은 우선순위에서 높지 않다.
+
+- 로버트 마틴은,
+  - 평균적으로 2년마다 회사를 옮겼다. 5년이나 머문 곳도 있고, 3개월 만에 나온 곳도 있었다.
+    - 좋은 사람들과 함께 일할 수 있었지만 나의 커리어 방향과는 맞지 않다는 것을 깨달았고 모두에게 양해를 구하고 나오게 되었다.
+  - 커리어 전반에 걸쳐, 항상 신중하게 다음 직장을 찾았다.
+    - 낚시하듯이 여러 회사에 맹목적으로 이력서를 보내는 일은 하지 않았다.
+    - 대신 내가 일하고 싶은 회사의 형태가 어떠해야 하는지 항상 집중했다.
+    - 현실에 부딪혀, 내가 아직 그런일을 하기에는 부족하다는 이야기를 들었을 때에도 시간을 두고 다시 준비하고 도전했다.
+    - 겪어온 모든 업무들은 커리어를 진전시키는 데 도움이 되었고, 프로가 되기 위한 여정이었다.
+
+- 커리어 만들어 나가기: 일을 선택하기 전 질문해볼 것들
+  - 나의 커리어로부터 나는 무엇을 원하는가?
+  - 그것을 성취하기 위한 다음 단계는 무엇인가?
+  - 이 일은 나의 커리어 방향과 합치하는가?
+  - 내가 이 회사에 줄 수 있는 가치의 양은 얼마나 되는가?
+  - 그러한 투자에 대한 이익은 무엇인가?
+  - 그러한 투자는 대략적으로 얼마동안 지속되어야 하는가?
+  - 내가 되고자 하는 프로페셔널에 이르는 데 이 일은 어떻게 도움이 되는가?
+  - 이 일에서 나는 자율성, 통달, 목적의식을 가질 수 있나?
+  - 나의 고용주와 생산적인 동반자 관계를 맺을 수 있나? 양측 모두 가치를 얻고 행복할 수 있나?
+
+→ 면접 과정은 지원자 입장에서도 회사를 평가할 수 있는 기회다. 고용 관계를 맺기 전에, 그 기회를 최대한 이용하여 정보를 얻어야만 한다.
+
+- 왜 사표를 썼나?
+  - 시간이 지나면서 나의 커리어 열망이 바뀌었다. 개인적인 삶도 바뀌었다. 일부는 회사가 바뀌기도 했다. 무엇이든 변한다.
+  - 무엇인가가 바뀌면 회사에 이야기를 했고 회사는 회사가 할 수 있는 범위 안에서 내가 원하는 것들을 최대한 주려 했다.
+    - 그럼에도 불구하고 내가 찾고 있는 것을 줄 수 없을 때가 있다.
+    - 반대로 내가 커리어에 대해 고민하는 와중에 내가 회사에 더 기여할 무언가가 없을 때도 있다.
+    - 내가 무언가 매우 큰 변화를 원할 수도 있다.
+
+- 개발자들을 만나면 만날수록, 익숙한 공간을 벗어나 바깥 세상을 경험할수록 나는 아직 한참 멀었다는 것을 깨달았다.
+  - 감고 있던 눈을 크게 뜨고 무언가를 배우고 발전할 수 있는 기회를 찾아야만 했다.
+  - 일들 하나하나가 여정에서 우리가 더 멀리 나아갈 수 있게 해준다.
+  - 일을 선택하는 것은 매우 신중해야 한다.
+
+→ 개인의 커리어 열망과 방향이 합치하는 한 그 회사에 가능한 오랫동안 머무르길 권한다.
+
+- 움직여야 할 때
+  - 앞으로 나아가지 못하고 정체되어 있다고 느낀다면,
+  - 무언가를 배우거나 스스로 일을 즐기지 못한다면, 그때는 움직여야만 한다.
+  - 회사와 동료들을 사랑한다는 것만으로는 그 일을 계속해야 하는 충분한 이유가 되지 못한다.
+- 원하는 커리어 방향에 더 적합한 길을 찾아나서는 것은 자신은 물론 회사에도 도움이 된다.
+  - 불행한 직원이 줄어서 좋을 뿐만 아니라, 새로운 사람을 들일 기회가 된다.
+  - 새로운 사람은 새로운 아이디어와 더 많은 에너지로 정체된 상황에 도전하고 훌륭한 일을 해낼 수도 있다.
+  - 매년 15~30% 정도씩 구성원이 바뀌는 것은 회사에 매우 득이되는 일이다.
+
+- 원하는 바를 모른다면 어떻게 해야 할까?
+  - 내가 원하는 것을 나도 모른다는 것을 인정하고 나면 나의 길을 찾는 데 좀더 객관적으로 집중할 수 있다.
+  - 그런 상황에 빠졌을 때 할 수 있는 것은 마음을 열고 사람들을 만나는 것 밖에 없다.
+  - 커뮤니티 행사에 참석하고, 오픈 소스에 기여하고, 토론 메일링 리스트에 참여한다. 영감을 줄 수 있는 사람도 찾아 나서는게 좋다.
+  - 놀라운 사람들로 가득하고 이전에는 생각지도 못한 기회들이 있다.
+
+### 다양성
+
+---
+- 소프트웨어 개발은 다양성이 높은 전문 분야다. 성공적인 장인이라면 넓은 방면으로 다양한 경험이 있다.
+  - 스타트업이나 모바일 게임 개발자 vs 다국적 투자 은행 엔터프라이즈 시스템 개발자
+  - 대중을 위한 소프트웨어 vs 내부에서 사용되는 소프트웨어
+  - 프레임워크나 도구를 만드는 것 vs 맞춤 개발된 비즈니스 애플리케이션을 만드는 것
+
+- 컨설팅 회사에서 일하는 것은 서로 다른 프로젝트와 환경들을 접해볼 수 있는 좋은 기회다.
+  - 한 회사에 적을 둔 상태로 이직의 부담 없이 이러한 새로운 경험들을 얻을 수 있다.
+  - 인적 네트워크를 확대하기에 좋다.
+  - 특히 커리어의 초반이라면 더욱 그렇다.
+- 특정 산업이나 특정 분야의 스페셜리스트: 전문화된 장인으로서 훌륭하게 활약할 수 있다.
+
+### 소프트웨어 장인의 사명
+
+---
+- 소프트웨어 장인은 자신만의 사명이 있다.
+  - 더 나아지는 데 집중하고,
+  - 계속해서 자신의 커리어에 투자하며,
+  - 배우고, 가르치고, 공유한다.
+
+- 소프트웨어 장인은 그냥 일을 하기 위해 고용된 평범한 개발자가 아니다.
+  - 장인은 다른 개발자들이 더 나은 코드를 만들고 스스로가 하는 일에 자부심을 갖도록 돕는 데 관심을 둔다.
+  - 장인은 아침에 일어나서 출근하여 급여를 받는 것 이상을 생각한다.
+  - 주변의 것들을 더 나아지게 하고 우리가 사는 세상을 변화시킬 것을 생각한다.
+
+- 소프트웨어 장인이 된다는 것
+  - 잘 짜여진 코드를 만드는 소프트웨어 개발자가 되는 것에서 훨씬 더 나아간, 삶의 철학이다.
+  - 탁월함에 헌신하고, 탁월함의 추구를 본성처럼 만든다.
+  - 우리 사회의 진화를 이끄는 일에 무한한 자부심을 갖는다.
+
+- 소프트웨어 장인 vs 소프트웨어 개발자
+  - 보통의 개발자와 장인의 차이점은 스스로 직업을 대하는 태도에 있다.
+  - 추구하는 가치는 말이 아니라 행동에 의해 규정된다.
+  - 소프트웨어 개발을 대하는 태도, 자신의 일에 대한 관심, 매일같이 활용하는 실행 관례들, 자기계발을 위한 열정, 고객에 대한 존중.
+  - 장인이 된다는 것이 다른 개발자들보다 우월하거나 더 낫다는 의미는 아니다.
+  - 그가 추구하는 가치와 프로페셔널한 태도를 지칭하는 것이지 능력을 지칭하는 것이 아니다.
+  - 장인정신 ≠ 엘리트주의
+
+
 - [Notion link](https://www.notion.so/be86a3f5bde74497a18127add9219fb3)
