[TIL/book] 읽기 좋은 코드가 좋은 코드다 (~ Part 2. 루프와 논리를 단순화하기 - 7. 읽기 쉽게 흐름제어 만들기)

--- a/book/읽기_좋은_코드가_좋은_코드다.md
+++ b/book/읽기_좋은_코드가_좋은_코드다.md
@@ -271,13 +271,86 @@
     - 왼쪽: 값이 더 유동적인 ‘질문을 받는’ 표현
     - 오른쪽: 더 고정적인 값으로, 비교대상으로 사용되는 표현
     - ex> `if (length > 10)`
-- if/else 블록의 순서
+- `if/else` 블록의 순서
     - 부정이 아닌 긍정을 다루어라.
         - 즉 `if(!debug)`가 아니라 `if(debug)`를 선호하자.
     - 간단한 것을 먼저 처리하라.
-        - 이렇게 하면 동시에 같은 화면에 if와 else 구문을 나타낼 수도 있다.
+        - 이렇게 하면 동시에 같은 화면에 `if`와 `else`구문을 나타낼 수도 있다.
         - 두 개의 주문을 동시에 보는 게 더 좋다.
     - 더 흥미롭고, 확실한 것을 먼저 다루어라.
+        - before
+
+          ![Untitled41.png](image/theartofreadablecode/Untitled%2041.png)
+
+      ![Untitled42.png](image/theartofreadablecode/Untitled%2042.png)
+
+    - 그러나, 부정부터 다루어야 더 단순하고 흥미로우면서 동시에 위험해지는 경우도 있다.
+
+      ![Untitled43.png](image/theartofreadablecode/Untitled%2043.png)
+
+        - 이 경우에는 상세 내용을 따지고 난 뒤 판단을 내려야 한다.
+- 삼항 연산자(`?:`)를 이용하는 조건문 표현
+    - 삼항 연산자가 읽기 편하고 간결한 경우: 매우 간단할 때만 사용해야 한다.
+        - before
+
+            ```java
+            if (hour >= 12) {
+                time_str += "pm";
+            } else {
+                time_str += "am";
+            }
+            ```
+
+        ```java
+        time_str += (hour >= 12) ? "pm" : "am";
+        ```
+
+    - 복잡해지는 경우: 간단한 두 값에서 선택하는 문제가 아닌 경우.
+
+        ```java
+        return exp >= 0 ? m + (1 << exp) : m / (1 << -exp);
+        ```
+
+        - 코드를 이렇게 작성하는 것은 그저 '모든 것을 한 줄에 쓰기'다. → `if/else`문이 낫다.
+- `do/while` 루프를 피하라: 조건이 '눈에 뜨이는 곳에 미리' 나타나는 것이 좋다.
+    - `if`, `while`, `for`문의 동작 원리는 모두 코드를 위에서 아래로 읽는다.
+    - 그러나 `do/while`은 역순이라 코드를 두 번 읽어야 해서 부자연스럽다.
+- 함수 중간에서 반환하기
+    - 함수 중간에서 반환하는 것이 바람직할 때도 있어, 완전히 허용되어야 한다.
+
+      ![Untitled44.png](image/theartofreadablecode/Untitled%2044.png)
+
+        - 위의 함수를 중간에서 반환하는 보호장치 없이 구현하면 매우 부자연스러워질 것이다.
+    - 반환 포인트를 하나만 두려는 건 함수의 끝부분에서 실행되는 클린업(cleanup) 코드의 호출을 보장하려는 의도다.
+        - 언어 차원에서 제공하는 더 정교한 클린업 코드를 실행시키는 방법을 사용하자.
+
+      ![Untitled45.png](image/theartofreadablecode/Untitled%2045.png)
+
+- 악명 높은 `goto`는 피하는 게 낫다.
+- 중첩을 최소화하기
+    - 코드의 중첩이 일어날 때마다 코드를 읽는 사람의 '정신적 스택'에 추가적인 조건이 입력된다.
+    - 함수 중간에서 반환하여 중첩을 제거하라
+        - before
+
+          ![Untitled46.png](image/theartofreadablecode/Untitled%2046.png)
+
+      ![Untitled47.png](image/theartofreadablecode/Untitled%2047.png)
+
+    - 루프 내부에 있는 중첩 제거하기 - 루프 중간에서 반환하기
+        - before
+
+          ![Untitled48.png](image/theartofreadablecode/Untitled%2048.png)
+
+      ![Untitled49.png](image/theartofreadablecode/Untitled%2049.png)
+
+        - `if/return`을 함수의 보호 장치로 사용했듯이, `if/continue`도 루프의 보호 장치로 사용할 수 있다.
+
+- 실행 흐름을 따라올 수 있는가?
+    - 눈에 보이는 코드의 '뒤에서' 실행되는 몇 가지
+
+      ![Untitled50.png](image/theartofreadablecode/Untitled%2050.png)
+
+  → 이러한 구조가 차지하는 비율이 너무 높지 않아야 한다.
 
 
 ## 8. 거대한 표현을 잘게 쪼개기
