[TIL/book] 읽기 좋은 코드가 좋은 코드다 (~ Part 3. 코드 재작성하기)

--- a/book/읽기_좋은_코드가_좋은_코드다.md
+++ b/book/읽기_좋은_코드가_좋은_코드다.md
@@ -355,39 +355,454 @@
 
 ## 8. 거대한 표현을 잘게 쪼개기
 
----
+- 설명 변수(추가 변수)
+    - 커다란 표현을 쪼개는 가장 쉬운 방법은 작은 하위표현을 담을 추가 변수를 만드는 것이다.
+    - before
+
+        ```python
+        if line.split(':')[0].strip() == "root":
+            ...
+        ```
+
+    ```python
+    username = line.split(':')[0].strip()
+    if username == "root":
+        ...
+    ```
+
+- 요약 변수
+    - 커다란 코드 덩어리를 짧은 이름으로 대체하여 더 쉽게 관리하고 파악하는 목적을 가진 변수
+    - before
+
+        ```java
+        if (request.user.id == document.owner_id) {
+            // 사용자가 이 문서를 수정할 수 있다...
+        }
+        ...
+        if (request.user.id != document.owner_id) {
+            // 무넛는 읽기전용이다...
+        }
+        ```
+
+    - `request.user.id == document.owner_id`는 변수 5개를 담고 있어, 이 표현을 읽으려면 추가적인 시간이 필요하다.
+
+    ```java
+    final boolean user_owns_document = (request.user.id == document.owner_id);
+
+    if (user_owns_document) {
+        // 사용자가 이 문서를 수정할 수 있다...
+    }
+    ...
+    if (!user_owns_document) {
+        // 무넛는 읽기전용이다...
+    }
+    ```
+
+    - user_owns_document 라는 표현을 맨 위에 두어 코드를 읽는 사람에게 “이것이 바로 이 함수에서 생각해야 하는 주된 개념이로군” 하는 생각이 들게 한다.
+- 드모르간의 법칙 사용하기
+    - 동일한 불리언 표현은 다음과 같이 두 방법으로 작성할 수 있다.
+    1. `not (a or b or c)` == `(not a) and (not b) and (not c)`
+    2. `not (a and b and c)` == `(not a) or (not b) or (not c)`
+    - before
+
+        ```java
+        if (!(file_exists && !is_protected)) Error("sorry, can't read file");
+        ```
+
+    ```java
+    if (!file_exists || is_protected) Error("sorry, can't read file");
+    ```
+
+- 쇼트 서킷 논리 오용하지 말기
+    - 대부분의 프로그래밍 언어에서 불리언 연산은 쇼트 서킷 평가를 수행한다.
+    - before
+
+        ```java
+        assert((!(bucket = FindBucket(key))) || !bucket -> IsOccupied());
+        ```
+
+    ```java
+    bucket = FindBucket(key);
+    if(bucket != NULL) assert(!bucket -> IsOccupied());
+    ```
+
+    - before 의 경우, 프로그래머는 의미를 이해하기 위해 손을 멈추고 생각해야 한다. 동일한 일을 수행하고 코드가 두 줄로 늘어났지만, 훨씬 이해하기 쉬워졌다.
+- 예: 복잡한 논리와 씨름하기
+    - before
+
+        ```java
+        return (begin >= other.begin && begin < other.end) ||
+               (end > other.begin && end <= other.end) ||
+               (begin <= other.begin && end >= other.end);
+        ```
+
+    ```java
+    bool Range::OverlapsWith(Range other) {
+        if (other.end <= begin) return false; // 우리가 시작하기 전에 끝난다.
+        if (other.begin >= end) return false; // 우리가 끝난 후에 시작한다.
+
+        return true;
+    }
+    ```
+
+    - 똑같은 문제를 ‘반대되는’ 방법으로 해결할 수 있는지 확인해보자.
+- 거대한 구문 나누기
+    - 조건부 내의 동일한 부분을 요약 변수로 추출해보자.
+
 
 ## 9. 변수와 가독성
 
----
+- (가독성에 도움되지 않는) 변수 제거하기
+    - 불필요한 임시 변수들
+
+        ```java
+        **now** = datetime.datetime.now()
+        root_message.last_view_time = now
+        ```
+
+        - 복잡한 표현을 잘게 나누지 않는다.
+        - 명확성에 도움이 되지 않는다. datetime.datetime.now()는 그 자체로 명확하다.
+        - 한 번만 사용되어 중복된 코드를 압축하지 않는다.
+    - 중간 결과 삭제하기
+        - before
+
+            ```java
+            var remove_one = function (array, value_to_remove) {
+                var index_to_remove = null;
+                for (var i = 0; i < array.length; i += 1) {
+                    if (array[i] === value_to_remove) {
+                        index_to_remove = i;
+                        break;
+                    }
+                }
+                if (index_to_remove !== null) {
+                    array.splice(index_to_remove, 1);
+                }
+            }
+            ```
+
+        ```java
+        var remove_one = function (array, value_to_remove) {
+            for (var i = 0; i < array.length; i += 1) {
+                if (array[i] === index_to_remove) {
+                    array.splice(i, 1);
+                    return;
+                }
+            }
+        }
+        ```
+
+        - 할 수만 있따면 이처럼 함수를 최대한 빨리 반환하는 게 좋다.
+    - 흐름 제어 변수 제거하기
+
+        ```java
+        boolean done = false;
+
+        while (/* 조건 */ && !done) {
+            ...
+
+            if (...) {
+                done = true;
+                continue;
+            }
+        }
+        ```
+
+        - 흐름 제어 변수: 순수하게 프로그램의 실행 방향을 설정한다.
+            - 데이터를 저장하지 않는다.
+            - done 같은 변수
+
+        ```java
+        while (/* 조건 */) {
+            ...
+            if (...) {
+                break;
+            }
+        }
+        ```
+
+        - 위와 같이 수정할 수 있다. 복잡하면 루프 안에서 반복되는 코드를 새로운 함수로 만들면 된다.
+- 변수의 범위를 좁혀라
+    - 변수가 적용되는 범위를 최대한 좁게 만들어라.
+    - 많은 메소드를 정적 static 으로 만들어서 클래스 멤버 접근을 제한해라.
+        - 정적 메소드는 코드를 읽는 사람에게 ‘이 코드는 저 변수들로부터 독립적’이라는 사실을 알려주는 매우 좋은 방법이다.
+    - 커다란 클래스를 여러 작은 클래스로 나누는 방법
+        - 작은 클래스들이 서로 독립적일 때 유용하다.
+    - 정의를 아래로 옮기기
+        - 많은 변수를 가지고 있는 긴 함수일 때, 지금 당장 사용되지 않는 변수조차 일단 염두에 두게 강제하므로 좋지 않다.
+        - 각각의 정의를 실제로 사용하기 바로 직전 위치로 옮기는 게 좋다.
+- 값을 한 번만 할당하는 변수를 선호하라
+    - 상수는 코드를 읽는 사람에게 별다른 추가적인 생각을 요구하지 않는다. 자바에서 `final` 사용을 권장한다.
+    - 변수에 값을 한 번만 할당하게 할 수 없더라도, 최대한 적은 횟수로 변하게 하는 일은 도움이 된다.
+
 
 # Part 3. 코드 재작성하기
 
----
-
 ## 10. 상관없는 하위문제 추출하기
 
----
+- 주어진 함수나 코드 블록을 보고, ‘상위수준에서 본 이 코드의 목적은 무엇인가?’ 질문하라.
+- 코드의 모든 줄에 ‘이 코드는 직접적으로 목적을 위해서 존재하는가? 혹은 목적을 위해서 필요하긴 하지만 목적 자체와 직접적으로 상관없는 하위문제를 해결하는가?’ 질문하라.
+- 만약 상당히 원래의 목적과 직접적으로 관련되지 않은 하위문제를 해결하는 코드 분량이 많으면, 이를 추출해서 별도의 함수로 만든다.
+- 예: findClosestLocation()
+    - before
+
+        ```java
+        // 'array'의 어느 요소가 주어진 위/경도에 가장 가까운지 찾아서 반환한다.
+        // 지구를 완전한 구로 모델링한다.
+        var findClosestLocation = function (lat, lng, array) {
+            var closest;
+            var closest_dist = Number.MAX_VALUE;
+
+            for (var i = 0; i < array.length; i += 1) {
+                // 두 점 모두를 라디안으로 변환한다.
+                var lat_rad = radians(lat);
+                var lng_rad = radians(lng);
+                var lat2_rad = radians(array[i].latitude);
+                var lng2_rad = radians(array[i].longitude);
+
+                // '코사인의 특별법칙' 공식을 사용한다.
+                var dist = Math.acos(Math.sin(lat_rad) * Math.sin(lat2_rad) + Math.cos(lat_rad) * Math.cos(lat2_rad) * Math.cos(lng2_rad - lng_rad));
+
+                if (dist < closest_dist) {
+                    closest = array[i];
+                    closest_dist = dist;
+                }
+            }
+            return closest;
+        }
+        ```
+
+    - 루프 내부의 상관없는 하위문제(구 위의 두 개의 위/경도 점 사이의 거리 계산)를 별도의 함수로 추출하자.
+
+        ```java
+        var spherical_distance = function (lat1, lng1, lat2, lng2) {
+                // 두 점 모두를 라디안으로 변환한다.
+                var lat1_rad = radians(lat1);
+                var lng1_rad = radians(lng1);
+                var lat2_rad = radians(lat2);
+                var lng2_rad = radians(lng2);
+
+                // '코사인의 특별법칙' 공식을 사용한다.
+                return Math.acos(Math.sin(lat1_rad) * Math.sin(lat2_rad) + Math.cos(lat1_rad) * Math.cos(lat2_rad) * Math.cos(lng2_rad - lng1_rad));
+        }
+        ```
+
+        ```java
+        // 'array'의 어느 요소가 주어진 위/경도에 가장 가까운지 찾아서 반환한다.
+        // 지구를 완전한 구로 모델링한다.
+        var findClosestLocation = function (lat, lng, array) {
+            var closest;
+            var closest_dist = Number.MAX_VALUE;
+
+            for (var i = 0; i < array.length; i += 1) {
+                var dist = spherical_distance(lat, lng, array[i].latitude, array[i].longitude);
+                if (dist < closest_dist) {
+                    closest = array[i];
+                    closest_dist = dist;
+                }
+            }
+            return closest;
+        }
+        ```
+
+        - 상위수준의 목적에 집중할 수 있어 전반적으로 코드의 가독성이 높아졌다.
+        - spherical_distance()는 독립적인 테스트도 더 용이하다.
+- 순수한 유틸리티 코드
+    - 문자열 변경, 해시테이블 사용, 파일 읽기/쓰기 등 ‘기본적인 유틸리티’는 해당 프로그래밍 언어에 내장된 라이브러리에 있다.
+    - 유틸리티 코드에 존재하지 않는 직접 상관없는 하위 문제를 다루는 함수라면, 다른 프로젝트에서도 사용할 수 있는 별도의 유틸리티 코드 모음을 만들자.
+- 일반적인 목적의 코드
+    - before
+
+        ```java
+        ajax_post({
+            url: "http://example.com/submit",
+            data: data,
+            on_success: function (response_data) {
+                var str = "{\n";
+                for (var key in response_data) {
+                    str += " " + key + " = " + response_data[key] + "\n";
+                }
+                alert(str + "}");
+            }
+        });
+        ```
+
+    - 이 코드의 상위수준 목적은 서버에 Ajax 호출을 하고 응답을 처리하는 것이다.
+    - 이러한 목적과 직접 상관없는 하위문제(딕셔너리에 담긴 내용을 예쁘게 출력하는 일)를 추출해서 format_pretty(obj) 함수로 만들자.
+
+        ```java
+        var format_pretty = function (obj) {
+            var str = "{\n";
+            for (var key in obj) {
+                str += " " + key + " = " + obj[key] + "\n";
+            }
+            return str + "}";
+        }
+        ```
+
+- 일반적인 목적을 가진 코드를 많이 만들어라
+    - 상관없는 하위문제를 다루는 함수들은 매우 기본적이고 폭넓게 적용할 수 있는 일을 수행하므로 다른 프로젝트에서도 사용할 수 있다.
+    - 코드베이스는 이 같은 코드를 담아두는 (ex> util/ 같은) 디렉터리를 따로 두고 있으므로 코드를 쉽게 공유할 수 있다.
+    - 일반적인 목적을 가진 코드는 프로젝트의 나머지 부분에서 완전히 분리되므로 좋다.
+    - 이러한 코드는 개발하고, 테스트하고, 이해하기도 쉽다.
+- 특정한 프로젝트를 위한 기능
+    - util/ 디렉터리에 놓아도 되고, 함수가 사용되는 장소에 그대로 두어도 좋다. 필요하면 옮기면 된다.
+- 기존의 인터페이스를 단순화하기
+    - 사용하는 인터페이스가 깔끔하지 않다면, 이를 둘러싸는 함수를 작성하여 지저분한 내부를 감출 수 있다.
+- 자신의 필요에 맞춰서 인터페이스의 형태를 바꾸기
+- 지나치게 추출하기: 가독성 비용을 생각하자.
+    - 자잘한 함수를 사용하면 오히려 가독성을 해친다.
+    - 사용자가 신경 써야 하는 내용이 늘어나고, 실행 경로를 추적하려면 코드의 곳곳을 돌아다녀야 하기 때문이다.
+    - 다른 프로젝트에서도 사용된다면 추출하는 것이 그리 나쁘진 않지만, 그런 순간이 오기 전에는 그럴 필요가 없다.
+
 
 ## 11. 한번에 하나씩
 
----
+- 함수는 오직 한 가지 작업만 수행해야 한다.
+    1. 코드가 수행하는 모든 ‘작업’을 나열한다. 이는 “이 객체가 정상적으로 존재하는지 확인하라”처럼 작은 일일 수도 있고, “트리 안에 있는 모든 노드를 방문하라”처럼 모호한 일일 수도 있다.
+    2. 이러한 작업을 분리하여 서로 다른 함수로 혹은 적어도 논리적으로 구분되는 영역에 놓을 수 있는 코드로 만들어라.
+
+- 작업은 작을 수 있다.
+- 객체에서 값 추출하기
+    - ‘한 번에 한 가지 일’ 원리 적용하기
+    - before
+
+        ```java
+        var place = location_info["LocalityName"]; // ex> Santa Monica
+        if (!place) {
+            place = location_info["SubAdministrativeAreaName"]; // ex> Los Angeles
+        }
+        if (!place) {
+            place = location_info["AdministrativeAreaName"]; // ex> California
+        }
+        if (!place) {
+            place = "Middle-of-Nowhere";
+        }
+        if (location_info["CountryName"]) {
+            place += ", " + location_info["CountryName"]; // ex> USA
+        } else {
+            place += ", Planet Earth";
+        }
+
+        return place;
+        ```
+
+    - location_info에서 값을 읽는 첫 번째 작업
+
+        ```java
+        var town = location_info["LocalityName"]; // ex> Santa Monica
+        var city = location_info["SubAdministrativeAreaName"]; // ex> Los Angeles
+        var state = location_info["AdministrativeAreaName"]; // ex> California
+        var country = location_info["CountryName"]; // ex> USA
+        ```
+
+    - 반환되는 값의 ‘두 번째 절반’이 무엇인지 알아야 한다.
+
+        ```java
+        var second_half = "Planet Earth";
+        if (country) {
+            second_half = country;
+        }
+        if (state && country === "USA") {
+            second_half = state;
+        }
+        ```
+
+    - 이 같이 ‘첫 번째 절반’도 알아내자.
+
+        ```java
+        var first_half = "Middle-of-Nowhere";
+        if (state && country != "USA") {
+            first_half = state;
+        }
+        if (city) {
+            first_half = city;
+        }
+        if (town) {
+            first_half = town;
+        }
+        ```
+
+    - 위의 두 절반을 묶는다. `return first_half + “, ” + second_half;`
+- 더 큰 예제
+    - 코드 전반에 걸쳐서 뒤섞여 있는 별도의 작업을 보자.
+        1. 각 키를 위한 기본값으로 “unknown” 사용하기
+        2. HttpDownload의 멤버 중 존재하지 않는 값이 있는지 확인하기
+        3. 값을 읽어서 문자열로 변환하기
+        4. counts[] 갱신하기
+    - 별도의 영역으로 분리하면 한 개 영역을 읽는 동안에는 다른 영역을 생각할 필요가 전혀 없다.
+    - 나열된 작업 대상 중 일부만 분리되어도 큰 도움이 된다.
+
 
 ## 12. 생각을 코드로 만들기
 
----
+- 코드를 더 명확하게 만드는 간단한 과정
+    1. 코드가 할 일을 옆의 동료에게 말하듯이 평범한 영어로 묘사하라
+    2. 이 설명에 들어가는 핵심적인 단어와 문구를 포착하라
+    3. 설명과 부합하는 코드를 작성하라
+
+- 논리를 명확하게 설명하기
+    - before
+
+        ```java
+        $is_admin = is_admin_request();
+        if ($document) {
+            if  (!$is_admin && ($document['username'] != $_SESSION['username'])) {
+                return not_authorized();        
+            }
+        } else {
+            if (!$is_admin) {
+                return not_authorized();
+            }
+        }
+        ```
+
+    - 위의 논리를 쉬운 말로 묘사하는 것부터 시작해보자.
+        1. 관리자다.
+        2. 만약 문서가 있다면 현재 문서를 소유하고 있다.
+
+      그렇지 않으면 허가되지 않는다.
+
+    ```java
+    if (is_admin_request()) {
+        // 허가
+    } else if ($document && ($document['username'] == $_SESSION['username'])) {
+        // 허가
+    } else {
+        return not_authorized();
+    }
+    ```
+
+    - 이 버전은 코드의 분량이 더 적고, 부정문이 없어 논리도 더 간단해 졌다.
+- 라이브러리가 제공하는 기능을 잘 활용하자.
+
 
 ## 13. 코드 분량 줄이기
 
----
+- 그 기능을 구현하려고 애쓰지 마라 - 그럴 필요가 없다.
+    - 요구사항을 제거하기: 정말로 필요한 기능인지 정확히 생각해보자.
+- 요구사항에 질문을 던지고 질문을 잘게 나누어 분석하라
+    - 더 간단한 문제를 해결하기: 기능을 정확하게 구현하는 데에 필요한 상황을 생각해보자.
+- 코드베이스를 작게 유지하기
+    - 일반적인 ‘유틸리티’를 많이 생성하여 중복된 코드를 제거하라
+    - 사용하지 않는 코드 혹은 필요 없는 기능을 제거하라
+    - 프로젝트가 서로 분절된 하위프로젝트로 구성되게 하라
+    - 코드베이스의 ‘무게’를 항상 의식하여 가볍고 날렵하게 유지시켜라
+- 자기 주변에 있는 라이브러리에 친숙해져라
+    - 매일 15분씩 자신의 표준 라이브러리에 있는 모든 함수/모듈/타입들의 이름을 읽어라.
+    - 라이브러리 전체를 암기하는게 아니고, 그냥 그 안에 무엇이 있는지 감을 잡아놓고, 나중에 새로운 코드를 작성할 때 “잠깐만, 이건 전에 API 에서 봤던 것과 뭔가 비슷한데..”하고 생각하길 바라는 것이다.
+    - 평균 수준의 소프트웨어 엔지니어는 출시할 수 있는 수준의 코드를 하루 평균 10줄 정도 작성한다고 한다.
+        - ‘출시할 수 있는’ 코드다.
+        - 완숙한 라이브러리 안에 있는 코드는 한 줄 한 줄 모두 상당한 분량의 설계, 디버깅, 재작성, 문서화, 최적화, 테스트를 거쳤다.
+        - 이런 엄격한 적자생존의 과정을 겪으며 살아남은 코드는 모두 소중하다. 라이브러리를 이용하면 좋은 이유가 바로 여기 있다.
+        - 라이브러리를 사용하면 시간도 절약하고, 코드양이 줄어들기도 한다.
+- 예: 코딩 대신 유닉스 도구를 활용하기
+
 
 # Part 4. 선택된 주제들
 
----
-
 ## 14. 테스트와 가독성
 
----
 
 ## 15. '분/시간 카운터' 를 설계하고 구현하기
 
